--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
@@ -245,10 +245,10 @@
   "Common": {
     "Buttons": {
       "Submit": {
-        "Title": "de_Submit"
+        "Title": "Einreichen"
       },
       "Expand": {
-        "Title": "de_Expand"
+        "Title": "Aufklappen"
       }
     },
     "Navigation": {
@@ -261,135 +261,13 @@
       "LearnMore": "Mehr erfahren",
       "MedicalHistoryQuestionnaire": "Krankengeschichte",
       "MyAccount": "Mein Konto",
-      "MyDashboard": "de_My Dashboard",
+      "MyDashboard": "Mein Dashboard",
       "Next": "Weiter",
       "Previous": "Zurück",
       "SignIn": "Anmelden",
-      "Statistics": "de_Platform Statistics",
-      "Submit": "de_Submit",
+      "Statistics": "Plattform-Statistik",
+      "Submit": "Einreichen",
       "YourParticipants": "Ihre Teilnehmer"
-    }
-  },
-  "DataAccess": {
-    "Assurances": {
-      "AssuranceList": [
-        "de_Data will only be used for approved research.",
-        "de_Data confidentiality will be protected and the investigator will never make any attempt at \"re-identification.\"",
-        "de_There will be no transfer of any part of the dataset to any other investigators or institutions (except between collaborating investigators or any project assistants who answer directly to the Principal Investigator).",
-        "de_All applicable laws and local institutional policies will be followed.",
-        "de_Data will not be sold or shared with third parties.",
-        "de_Accidental transfer of any part of the dataset will be prevented. Adequate security controls are in place, such as secure laptops and storage devices; no downloading is allowed to unsecured network drives or servers.",
-        "de_Report on the uses of the data, e.g. publications, will be provided to the DAC annually.",
-        "de_The Global A-T Family Data Platform Dataset will be acknowledged in any publication or presentation resulting from the use of the Dataset.",
-        "de_Collaborating investigators from the researcher’s institution, as listed in the DAR form, agree to these Assurances.",
-        "de_These assurances will be agreed to annually."
-      ],
-      "Controls": {
-        "ApplyingSignature": {
-          "Label": "de_Signature of Applying Researcher"
-        },
-        "Date": {
-          "Label": "de_Date"
-        }
-      },
-      "Paragraph1": "de_I agree to the following assurances:",
-      "Title": "de_Assurances Statement"
-    },
-    "Dataset": {
-      "Controls": {
-        "Genomic": {
-          "Label": "de_Genomic Data"
-        },
-        "Survey": {
-          "Label": "de_Clinical Survey Data"
-        }
-      },
-      "Messages": {
-        "FileSizeExceedsTheLimit": "de_File size exceeds the limit",
-        "ResearcherBiosketch": "de_Researcher biosketch cannot be empty.",
-        "ResearcherEmail": "de_Researcher email cannot be empty.",
-        "ResearcherName": "de_Researcher name cannot be empty.",
-        "ResearcherOrgAddress": "de_Org address 1 cannot be empty.",
-        "ResearcherOrgCity": "de_Org city cannot be empty.",
-        "ResearcherOrgCountry": "de_Org country cannot be empty.",
-        "ResearcherOrgName": "de_Org name cannot be empty.",
-        "ResearcherOrgZip": "de_Org zip cannot be empty.",
-        "ResearcherPhone": "de_Researcher phone cannot include letters.",
-        "ResearcherProjectDescription": "de_Project description cannot be empty.",
-        "ResearcherSign": "de_Researcher signature cannot be empty.",
-        "ResearcherUse": "de_Research use cannot be empty."
-      },
-      "SubTitle1": "de_Select all applicable options.",
-      "SubTitle2": "de_Specific Requests",
-      "Text1": "de_Please state the disease area(s), if any, that this study focuses on.",
-      "Title": "de_Dataset(s) requested"
-    },
-    "Header": {
-      "Paragraph1": "Die Plattform für globale Daten von AT-Familien ist eine von Patienten unterstützte und von AT-Familien sowie von Experten betreute weltweite Initiative, die Forschern Gesundheits-, Gen- und andere Arten von Daten über Menschen mit AT zur Verfügung stellt. Mit dieser Plattform haben Forscher einen schnellen, sicheren und effektiven Zugriff auf wichtige Patientendaten aus der ganzen Welt, was hoffentlich zu neuen Entdeckungen führen wird.",
-      "Paragraph2": "de_Researchers should request access to the data using this Data Access Request (DAR) form which includes assurances associated with the use of these data sets.",
-      "Paragraph3": "de_Our Data Access Committee (DAC) will review the DAR form submitted by the researchers and will either approve or disapprove data access.",
-      "Paragraph4": "de_Researchers will certify that they will abide by the assurances given in this form, including agreeing not to distribute controlled-access data in any form to any third parties other than their own research staff who have agreed to these assurances. For projects that include collaborators at other institutions, collaborating investigators are required to submit separate DAR forms.",
-      "Paragraph5": "de_Upon receiving access approval, researchers will be provided with specific credentials to authenticate their identity and gain access to the controlled-access datasets. The DAC requests annual reports from researchers about what has been accomplished using the data and any violations of the assurances that may have occurred.",
-      "Title": "de_Data Access Request"
-    },
-    "OrganizationForm": {
-      "Address1": "de_Address 1",
-      "Address2": "de_Address 2",
-      "City": "de_City/Town",
-      "Country": "Land",
-      "Department": "de_Department",
-      "Name": "de_Organization Name",
-      "State": "Bundesland/Kanton/Provinz",
-      "Title": "de_Organization Information",
-      "Zip": "de_Zip/Postal Code"
-    },
-    "ResearcherForm": {
-      "Attachment": "de_Please attach a CV and/or biographical sketch (PDF files only, 2MB max)",
-      "Email": "de_Email",
-      "Name": "de_Name",
-      "Phone": "de_Phone",
-      "Title": "de_Researcher Information"
-    },
-    "ResearchProject": {
-      "Article1": {
-        "Paragraph": "de_Please note that coordinated requests made by researchers who are collaborating on the same project should use the same title.",
-        "Title": "de_Descriptive Title of Project"
-      },
-      "Article2": {
-        "Paragraph": "de_Collaborators at different institutions from the PI must complete a separate DAR form.",
-        "Title": "de_Names and Institutions of Collaborators"
-      },
-      "Article3": {
-        "Paragraph": "de_Please provide a brief description of the proposed use of the dataset(s) to be reviewed by the Data Access Committee. This statement should be one or two paragraphs in length and include research objectives, the study design and an analysis plan. If you are requesting multiple datasets, please describe how you will use them.",
-        "Title": "de_Research Use Statement"
-      },
-      "Title": "de_Research Project Overview"
-    },
-    "TypeResearch": {
-      "Controls": {
-        "Label": "de_Controls",
-        "Paragraph": "de_The reason for this request is to increase the number of controls available for a comparison group (e.g., a case-control study)."
-      },
-      "Describe": {
-        "Label": "de_Please describe"
-      },
-      "DisableStudy": {
-        "Label": "de_Disease study",
-        "Paragraph": "de_The primary purpose of the research is to learn more about a particular disease or disorder (e.g., type 2 diabetes), a trait (e.g., blood pressure), or a set of related conditions (e.g., autoimmune diseases, psychiatric disorders)."
-      },
-      "MethodDevelopment": {
-        "Label": "de_Methods development and validation studies",
-        "Paragraph": "de_The primary purpose of the research is to develop and/or validate new methods for analyzing or interpreting data (e.g., developing more powerful methods to detect epistatic, gene-environment, or other types of complex interactions in genome-wide association studies). Data will be used for developing and/or validating new methods."
-      },
-      "Other": {
-        "Label": "de_Other"
-      },
-      "Population": {
-        "Label": "de_Population structure or normal variation studies",
-        "Paragraph": "de_The primary purpose of the research is to understand variation in the general population (e.g., genetic substructure of a population)."
-      },
-      "SubTitle": "de_Select all applicable options.",
-      "Title": "de_Type of Research"
     }
   },
   "Footer": {
@@ -452,32 +330,32 @@
   "SDK": {
     "DownloadButton": "Überprüfung herunterladen",
     "CancelButton": "Abbrechen",
-    "CloseButton": "de_Close",
-    "CommunicationError": "de_There was a problem saving your data. Please check the form and your answers before submitting",
+    "CloseButton": "Schließen",
+    "CommunicationError": "Beim Speichern Ihrer Daten ist ein Fehler aufgetreten. Bitte prüfen Sie das Formular und Ihre Antworten vor dem Einreichen",
     "Dashboard": {
       "Text": "",
       "Title": "Mein Gerät"
     },
     "DatePicker": {
-      "April": "de_April",
-      "August": "de_August",
-      "Day": "de_Choose day...",
-      "December": "de_December",
-      "February": "de_February",
-      "January": "de_January",
-      "July": "de_July",
-      "June": "de_June",
-      "March": "de_March",
-      "May": "de_May",
-      "Month": "de_Choose month...",
-      "November": "de_November",
-      "October": "de_October",
-      "September": "de_September",
-      "Year": "de_Choose year..."
+      "April": "April",
+      "August": "August",
+      "Day": "Tag wählen ...",
+      "December": "Dezember",
+      "February": "Februar",
+      "January": "Januar",
+      "July": "Juli",
+      "June": "Juni",
+      "March": "März",
+      "May": "Mai",
+      "Month": "Monat wählen ...",
+      "November": "November",
+      "October": "Oktober",
+      "September": "September",
+      "Year": "Jahr wählen ..."
     },
     "DetailsPlaceholder": {
-      "PluralForm": "de_characters remaining",
-      "SingularForm": "de_character remaining"
+      "PluralForm": "Zeichen verbleibend",
+      "SingularForm": "Zeichen verbleibend"
     },
     "DoNotAssent": "Stimme nicht zu",
     "DoNotConsent": "Ich gebe mein Einverständnis nicht",
@@ -500,73 +378,73 @@
     "RegisterButton": "Registrieren",
     "SaveAndSubmit": "Speichern und einreichen",
     "SaveAndSubmitEnrollment": "Speichern und Registrierung einreichen",
-    "SavingButton": "de_Saving",
+    "SavingButton": "Wird gespeichert",
     "SignAndAssent": "Unterzeichnen und Zustimmung",
     "SignAndConsent": "Unterzeichnen und Einverständnis",
     "StartOrResume": "Starten/Fortsetzen",
-    "SubmitButton": "de_Submit",
+    "SubmitButton": "Einreichen",
     "SignInOut": {
       "SignOut": "Abmelden"
     },
     "Title": {
-      "Alert": "de_Your session will time-out soon",
-      "Default": "de_The Global A-T Family Data Platform"
+      "Alert": "Ihre Sitzung läuft in Kürze ab",
+      "Default": "Die Plattform für globale Daten von Familien mit AT-Diagnose"
     },
     "TooltipAlt": "Wessen Namen gebe ich ein?",
     "UserActivities": {
       "ActivityActions": "Aktionen",
-      "ActivityDate": "de_Created",
-      "ActivityName": "de_Form",
+      "ActivityDate": "Erstellt",
+      "ActivityName": "Formular",
       "ActivityStatus": "Status",
       "ActivityStatuses": {
         "COMPLETE": "Ausgefüllt",
         "CREATED": "Nicht begonnen",
         "IN_PROGRESS": "In Arbeit"
       },
-      "QuestionCount": "de_{{ answered }} / {{ total }} Answered",
-      "Summary": "de_Summary",
+      "QuestionCount": "{{ answered }} / {{ total }} Beantwortet",
+      "Summary": "Zusammenfassung",
       "SurveysToComplete": {
-        "Plural": "de_{{ count }} surveys to complete",
-        "Singular": "de_{{ count }} survey to complete"
+        "Plural": "{{ count }} Umfragen, an denen teilgenommen werden kann",
+        "Singular": "{{ count }} Umfrage, an der teilgenommen werden kann"
       }
     },
     "UserMenu": {
       "SignOutButton": "Abmelden"
     },
     "UserPreferences": {
-      "UserPreferencesGender": "de_Sex",
-      "UserPreferencesLocale": "de_Preferred language",
-      "UserPreferencesTitle": "de_User preferences"
+      "UserPreferencesGender": "Geschlecht",
+      "UserPreferencesLocale": "Bevorzugte Sprache",
+      "UserPreferencesTitle": "Nutzereinstellungen"
     },
-    "ValidateError": "de_Submission cannot proceed. Please review messages in form for details.",
+    "ValidateError": "Einreichen nicht möglich. Für Einzelheiten prüfen Sie bitte die im Formular angezeigten Meldungen.",
     "Validators": {
-      "DateNavyValidationRule": "[DE] Entered date is invalid"
+      "DateNavyValidationRule": "Das eingegebene Datum ist ungültig"
     }
   },
   "Statistics": {
-    "Title": "de_The A-T Family Data Platform by the Numbers",
+    "Title": "Die Plattform für Daten von Familien mit AT-Diagnose in Zahlen",
     "CountList": {
-      "totalParticipantsCount": "de_Total number of participants",
-      "countriesCount": "de_Countries represented",
-      "genomeStudyParticipantsCount": "de_People consenting to participate in genome sequencing",
-      "governedParticipantsCount": "de_Children enrolled by their parents",
-      "selfEnrolledParticipantsCount": "de_Self-enrolled participants"
+      "totalParticipantsCount": "Gesamtzahl der Teilnehmer",
+      "countriesCount": "Vertretene Länder",
+      "genomeStudyParticipantsCount": "Personen, die der Teilnahme an einer Genomsequenzierung zustimmen",
+      "governedParticipantsCount": "Von ihren Eltern registrierte Kinder",
+      "selfEnrolledParticipantsCount": "Teilnehmer, die sich selbst registriert haben"
     },
-    "Subtitle": "de_Countries represented"
+    "Subtitle": "Vertretene Länder"
   },
   "Survey": {
     "Self": "{{ firstName }}-Registrierungsprozess",
     "NewParticipant": "New Participant-Registrierungsprozess",
     "ThankYouPopup": {
-      "Text": "de_Thank you for submitting the survey"
+      "Text": "Vielen Dank für das Einreichen der Umfrage!"
     }
   },
   "Toolkit": {
     "ActivityActions": {
-      "Continue": "de_Continue",
-      "Start": "de_Start",
-      "View": "de_View",
-      "Edit": "de_Edit"
+      "Continue": "Weiter",
+      "Start": "Starten",
+      "View": "Anzeigen",
+      "Edit": "Bearbeiten"
     },
     "Dashboard": {
       "Actions": "Aktionen",
@@ -583,38 +461,38 @@
         "CancelButton": "Abbrechen",
         "Fields": {
           "ConfirmEmail": {
-            "Error": "de_Please enter a valid email address",
-            "Placeholder": "de_Email confirmation *"
+            "Error": "Geben Sie bitte eine gültige E-Mail-Adresse ein",
+            "Placeholder": "E-Mail-Bestätigung *"
           },
           "Email": {
-            "Error": "de_Please enter a valid email address",
+            "Error": "Geben Sie bitte eine gültige E-Mail-Adresse ein",
             "Placeholder": "E-Mail-Adresse"
           },
           "FirstName": {
-            "Error": "de_First Name is required",
+            "Error": "„Vorname“ ist ein Pflichtfeld",
             "Placeholder": "Vorname"
           },
           "LastName": {
-            "Error": "de_Last Name is required",
+            "Error": "„Nachname“ ist ein Pflichtfeld",
             "Placeholder": "Nachname"
           }
         },
-        "LoadingError": "de_We're sorry, but an error has occurred.",
-        "MatchEmailsError": "de_Please ensure that both email fields are filled in and that the addresses match.",
+        "LoadingError": "Es tut uns leid, aber es ist ein Fehler aufgetreten.",
+        "MatchEmailsError": "Stellen Sie sicher, dass beide E-Mail-Felder ausgefüllt sind und die Adressen übereinstimmen.",
         "Required": "",
-        "SubmitButton": "In Verteilerliste eintragen",
-        "Text": "Geben Sie eine E-Mail-Adresse an, an die wir aktuelle Informationen der Plattform für globale Daten von AT-Familien senden können.",
-        "Title": "Registrieren Sie sich, um aktuelle Informationen zu erhalten"
+        "SubmitButton": "In Liste eintragen",
+        "Text": "Geben Sie bitte unten Ihre E-Mail-Adresse an, damit wir Sie über neue Entwicklungen auf dem Laufenden halten können.\nSie können sich jederzeit wieder abmelden.",
+        "Title": "Bleiben Sie informiert"
       },
       "SessionWillExpire": {
         "Continue": "Weiter",
         "SignOut": "Abmelden",
-        "Text": "de_To protect your privacy, the system is going to log you out because you have been away for a while. Click “Continue” to stay logged in. Click “Sign Out” if you are done for now.",
-        "Title": "de_Your session will time-out soon"
+        "Text": "Zum Schutz Ihrer Privatsphäre meldet das System Sie ab, da Sie eine geraume Zeit nicht aktiv gewesen sind. Klicken Sie auf „Fortsetzen“, um weiter angemeldet zu bleiben. Klicken Sie auf „Abmelden“, wenn Sie fertig sind.",
+        "Title": "Ihre Sitzung läuft in Kürze ab"
       }
     },
     "ErrorCodes": {
-      "PASSWORD_RESET_LINK_EXPIRED": "de_Your password reset link has expired."
+      "PASSWORD_RESET_LINK_EXPIRED": "Ihr Link zum Zurücksetzen des Kennworts ist abgelaufen."
     },
     "ErrorPage": {
       "DefaultText": {
@@ -625,18 +503,18 @@
       "Title": "Es ist ein Fehler aufgetreten. Versuchen Sie es später erneut."
     },
     "Password": {
-      "InputPlaceholder": "de_Password",
-      "PasswordRequiredError": "de_Password is required",
-      "PasswordWrongError": "de_Incorrect password. Please try again.",
-      "Text": "de_Please enter your password *",
-      "Title": "de_Please enter the password"
+      "InputPlaceholder": "Kennwort",
+      "PasswordRequiredError": "„Kennwort“ ist ein Pflichtfeld",
+      "PasswordWrongError": "Falsches Kennwort. Versuchen Sie es erneut.",
+      "Text": "Geben Sie bitte Ihr Kennwort ein *",
+      "Title": "Geben Sie bitte das Kennwort ein"
     },
     "SessionExpired": {
-      "Text": "de_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
+      "Text": "Sie waren eine geraume Zeit nicht aktiv, weshalb wir Sie aus Sicherheitsgründen abgemeldet haben. Melden Sie sich bitte wieder an, um die Seite zu öffnen, an der Sie zuletzt gearbeitet haben."
     },
     "StayInformed": {
-      "Text": "Vielen Dank, dass Sie der Verteilerliste der Plattform für globale Daten von AT-Familien beigetreten sind. Sie erhalten über diese E-Mail-Adresse aktuelle Informationen über diese Initiative.",
-      "Title": "Registrieren Sie sich, um aktuelle Informationen zu erhalten"
+      "Text": "Vielen Dank, dass Sie sich in die E-Mail-Liste eingetragen haben. Wir werden Ihnen Neuigkeiten zuschicken und Sie auf dem Laufenden halten. Sie können sich jederzeit wieder abmelden. Bei Fragen zu Ihrem Status im Projekt schreiben Sie bitte eine E-Mail an",
+      "Title": "Bleiben Sie informiert"
     }
   },
   "WorkflowProgress": {
