--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
@@ -245,10 +245,10 @@
   "Common": {
     "Buttons": {
       "Submit": {
-        "Title": "es_Submit"
+        "Title": "Enviar"
       },
       "Expand": {
-        "Title": "es_Expand"
+        "Title": "Ampliar"
       }
     },
     "Navigation": {
@@ -261,135 +261,13 @@
       "LearnMore": "Más información",
       "MedicalHistoryQuestionnaire": "Historia clínica",
       "MyAccount": "Mi Cuenta",
-      "MyDashboard": "es_My Dashboard",
+      "MyDashboard": "Mi panel de control",
       "Next": "Siguiente",
       "Previous": "Ant",
       "SignIn": "Iniciar sesión",
-      "Statistics": "es_Platform Statistics",
-      "Submit": "es_Submit",
+      "Statistics": "Estadísiticas de la plataforma",
+      "Submit": "Enviar",
       "YourParticipants": "Sus participantes"
-    }
-  },
-  "DataAccess": {
-    "Assurances": {
-      "AssuranceList": [
-        "es_Data will only be used for approved research.",
-        "es_Data confidentiality will be protected and the investigator will never make any attempt at \"re-identification.\"",
-        "es_There will be no transfer of any part of the dataset to any other investigators or institutions (except between collaborating investigators or any project assistants who answer directly to the Principal Investigator).",
-        "es_All applicable laws and local institutional policies will be followed.",
-        "es_Data will not be sold or shared with third parties.",
-        "es_Accidental transfer of any part of the dataset will be prevented. Adequate security controls are in place, such as secure laptops and storage devices; no downloading is allowed to unsecured network drives or servers.",
-        "es_Report on the uses of the data, e.g. publications, will be provided to the DAC annually.",
-        "es_The Global A-T Family Data Platform Dataset will be acknowledged in any publication or presentation resulting from the use of the Dataset.",
-        "es_Collaborating investigators from the researcher’s institution, as listed in the DAR form, agree to these Assurances.",
-        "es_These assurances will be agreed to annually."
-      ],
-      "Controls": {
-        "ApplyingSignature": {
-          "Label": "es_Signature of Applying Researcher"
-        },
-        "Date": {
-          "Label": "es_Date"
-        }
-      },
-      "Paragraph1": "es_I agree to the following assurances:",
-      "Title": "es_Assurances Statement"
-    },
-    "Dataset": {
-      "Controls": {
-        "Genomic": {
-          "Label": "es_Genomic Data"
-        },
-        "Survey": {
-          "Label": "es_Clinical Survey Data"
-        }
-      },
-      "Messages": {
-        "FileSizeExceedsTheLimit": "es_File size exceeds the limit",
-        "ResearcherBiosketch": "es_Researcher biosketch cannot be empty.",
-        "ResearcherEmail": "es_Researcher email cannot be empty.",
-        "ResearcherName": "es_Researcher name cannot be empty.",
-        "ResearcherOrgAddress": "es_Org address 1 cannot be empty.",
-        "ResearcherOrgCity": "es_Org city cannot be empty.",
-        "ResearcherOrgCountry": "es_Org country cannot be empty.",
-        "ResearcherOrgName": "es_Org name cannot be empty.",
-        "ResearcherOrgZip": "es_Org zip cannot be empty.",
-        "ResearcherPhone": "es_Researcher phone cannot include letters.",
-        "ResearcherProjectDescription": "es_Project description cannot be empty.",
-        "ResearcherSign": "es_Researcher signature cannot be empty.",
-        "ResearcherUse": "es_Research use cannot be empty."
-      },
-      "SubTitle1": "es_Select all applicable options.",
-      "SubTitle2": "es_Specific Requests",
-      "Text1": "es_Please state the disease area(s), if any, that this study focuses on.",
-      "Title": "es_Dataset(s) requested"
-    },
-    "Header": {
-      "Paragraph1": "La Plataforma global de datos para familias con A-T es un proyecto dirigido por pacientes y supervisado por familias con A-T y expertos de todo el mundo donde se puede compartir con los investigadores información de salud, datos genéticos y potencialmente otro tipo de datos sobre las personas con A-T. Esta plataforma permitirá que los investigadores tengan acceso a datos importantes de pacientes de todo el mundo de forma rápida, segura y eficiente, con la esperanza de que conduzca a nuevos descubrimientos.",
-      "Paragraph2": "es_Researchers should request access to the data using this Data Access Request (DAR) form which includes assurances associated with the use of these data sets.",
-      "Paragraph3": "es_Our Data Access Committee (DAC) will review the DAR form submitted by the researchers and will either approve or disapprove data access.",
-      "Paragraph4": "es_Researchers will certify that they will abide by the assurances given in this form, including agreeing not to distribute controlled-access data in any form to any third parties other than their own research staff who have agreed to these assurances. For projects that include collaborators at other institutions, collaborating investigators are required to submit separate DAR forms.",
-      "Paragraph5": "es_Upon receiving access approval, researchers will be provided with specific credentials to authenticate their identity and gain access to the controlled-access datasets. The DAC requests annual reports from researchers about what has been accomplished using the data and any violations of the assurances that may have occurred.",
-      "Title": "es_Data Access Request"
-    },
-    "OrganizationForm": {
-      "Address1": "es_Address 1",
-      "Address2": "es_Address 2",
-      "City": "es_City/Town",
-      "Country": "País",
-      "Department": "es_Department",
-      "Name": "es_Organization Name",
-      "State": "Estado/Provincia",
-      "Title": "es_Organization Information",
-      "Zip": "es_Zip/Postal Code"
-    },
-    "ResearcherForm": {
-      "Attachment": "es_Please attach a CV and/or biographical sketch (PDF files only, 2MB max)",
-      "Email": "es_Email",
-      "Name": "es_Name",
-      "Phone": "es_Phone",
-      "Title": "es_Researcher Information"
-    },
-    "ResearchProject": {
-      "Article1": {
-        "Paragraph": "es_Please note that coordinated requests made by researchers who are collaborating on the same project should use the same title.",
-        "Title": "es_Descriptive Title of Project"
-      },
-      "Article2": {
-        "Paragraph": "es_Collaborators at different institutions from the PI must complete a separate DAR form.",
-        "Title": "es_Names and Institutions of Collaborators"
-      },
-      "Article3": {
-        "Paragraph": "es_Please provide a brief description of the proposed use of the dataset(s) to be reviewed by the Data Access Committee. This statement should be one or two paragraphs in length and include research objectives, the study design and an analysis plan. If you are requesting multiple datasets, please describe how you will use them.",
-        "Title": "es_Research Use Statement"
-      },
-      "Title": "es_Research Project Overview"
-    },
-    "TypeResearch": {
-      "Controls": {
-        "Label": "es_Controls",
-        "Paragraph": "es_The reason for this request is to increase the number of controls available for a comparison group (e.g., a case-control study)."
-      },
-      "Describe": {
-        "Label": "es_Please describe"
-      },
-      "DisableStudy": {
-        "Label": "es_Disease study",
-        "Paragraph": "es_The primary purpose of the research is to learn more about a particular disease or disorder (e.g., type 2 diabetes), a trait (e.g., blood pressure), or a set of related conditions (e.g., autoimmune diseases, psychiatric disorders)."
-      },
-      "MethodDevelopment": {
-        "Label": "es_Methods development and validation studies",
-        "Paragraph": "es_The primary purpose of the research is to develop and/or validate new methods for analyzing or interpreting data (e.g., developing more powerful methods to detect epistatic, gene-environment, or other types of complex interactions in genome-wide association studies). Data will be used for developing and/or validating new methods."
-      },
-      "Other": {
-        "Label": "es_Other"
-      },
-      "Population": {
-        "Label": "es_Population structure or normal variation studies",
-        "Paragraph": "es_The primary purpose of the research is to understand variation in the general population (e.g., genetic substructure of a population)."
-      },
-      "SubTitle": "es_Select all applicable options.",
-      "Title": "es_Type of Research"
     }
   },
   "Footer": {
@@ -452,32 +330,32 @@
   "SDK": {
     "DownloadButton": "Descargar revisión",
     "CancelButton": "Cancelar",
-    "CloseButton": "es_Close",
-    "CommunicationError": "es_There was a problem saving your data. Please check the form and your answers before submitting",
+    "CloseButton": "Cerrar",
+    "CommunicationError": "Se ha producido un error al guardar sus datos. Compruebe el formulario y sus respuestas antes de enviarlo.",
     "Dashboard": {
       "Text": "",
       "Title": "Mi consola"
     },
     "DatePicker": {
-      "April": "es_April",
-      "August": "es_August",
-      "Day": "es_Choose day...",
-      "December": "es_December",
-      "February": "es_February",
-      "January": "es_January",
-      "July": "es_July",
-      "June": "es_June",
-      "March": "es_March",
-      "May": "es_May",
-      "Month": "es_Choose month...",
-      "November": "es_November",
-      "October": "es_October",
-      "September": "es_September",
-      "Year": "es_Choose year..."
+      "April": "Abril",
+      "August": "Agosto",
+      "Day": "Seleccione el día...",
+      "December": "Diciembre",
+      "February": "Febrero",
+      "January": "Enero",
+      "July": "Julio",
+      "June": "Junio",
+      "March": "Marzo",
+      "May": "Mayo",
+      "Month": "Seleccione el mes...",
+      "November": "Noviembre",
+      "October": "Octubre",
+      "September": "Septiembre",
+      "Year": "Seleccione el año..."
     },
     "DetailsPlaceholder": {
-      "PluralForm": "es_characters remaining",
-      "SingularForm": "es_character remaining"
+      "PluralForm": "caracteres restantes",
+      "SingularForm": "carácter restante"
     },
     "DoNotAssent": "No doy mi conformidad",
     "DoNotConsent": "No doy mi consentimiento",
@@ -500,73 +378,73 @@
     "RegisterButton": "Registrarse",
     "SaveAndSubmit": "Guardar y enviar",
     "SaveAndSubmitEnrollment": "Guardar y enviar inscripción",
-    "SavingButton": "es_Saving",
+    "SavingButton": "Guardando",
     "SignAndAssent": "Firma y conformidad",
     "SignAndConsent": "Firma y consentimiento",
     "StartOrResume": "Iniciar/Reanudar",
-    "SubmitButton": "es_Submit",
+    "SubmitButton": "Enviar",
     "SignInOut": {
       "SignOut": "Cerrar sesión"
     },
     "Title": {
-      "Alert": "es_Your session will time-out soon",
-      "Default": "es_The Global A-T Family Data Platform"
+      "Alert": "Su sesión caducará pronto",
+      "Default": "La plataforma de datos Global A-T Family"
     },
     "TooltipAlt": "¿Qué nombre debo ingresar?",
     "UserActivities": {
       "ActivityActions": "Acciones",
-      "ActivityDate": "es_Created",
-      "ActivityName": "es_Form",
+      "ActivityDate": "Creado",
+      "ActivityName": "Formulario",
       "ActivityStatus": "Estado",
       "ActivityStatuses": {
         "COMPLETE": "Completo",
         "CREATED": "No comenzado",
         "IN_PROGRESS": "En curso"
       },
-      "QuestionCount": "es_{{ answered }} / {{ total }} Answered",
-      "Summary": "es_Summary",
+      "QuestionCount": "{{ answered }} / {{ total }} respondidos",
+      "Summary": "Resumen",
       "SurveysToComplete": {
-        "Plural": "es_{{ count }} surveys to complete",
-        "Singular": "es_{{ count }} survey to complete"
+        "Plural": "{{ count }} encuestas que completar",
+        "Singular": "{{ count }} encuesta que completar"
       }
     },
     "UserMenu": {
       "SignOutButton": "Cerrar sesión"
     },
     "UserPreferences": {
-      "UserPreferencesGender": "es_Sex",
-      "UserPreferencesLocale": "es_Preferred language",
-      "UserPreferencesTitle": "es_User preferences"
+      "UserPreferencesGender": "Sexo",
+      "UserPreferencesLocale": "Idioma preferido",
+      "UserPreferencesTitle": "Preferencias de usuario"
     },
-    "ValidateError": "es_Submission cannot proceed. Please review messages in form for details.",
+    "ValidateError": "No se puede enviar. Revise los mensajes en el formulario para obtener más información.",
     "Validators": {
-      "DateNavyValidationRule": "[ES] Entered date is invalid"
+      "DateNavyValidationRule": "La fecha ingresada no es válida"
     }
   },
   "Statistics": {
-    "Title": "es_The A-T Family Data Platform by the Numbers",
+    "Title": "La plataforma de datos A-T Family en números",
     "CountList": {
-      "totalParticipantsCount": "es_Total number of participants",
-      "countriesCount": "es_Countries represented",
-      "genomeStudyParticipantsCount": "es_People consenting to participate in genome sequencing",
-      "governedParticipantsCount": "es_Children enrolled by their parents",
-      "selfEnrolledParticipantsCount": "es_Self-enrolled participants"
+      "totalParticipantsCount": "Número total de participantes",
+      "countriesCount": "Países representados",
+      "genomeStudyParticipantsCount": "Personas que han dado su consentimiento para participar en la secuenciación genómica",
+      "governedParticipantsCount": "Niños inscritos por sus padres",
+      "selfEnrolledParticipantsCount": "Participantes inscritos de forma autónoma"
     },
-    "Subtitle": "es_Countries represented"
+    "Subtitle": "Países representados"
   },
   "Survey": {
     "Self": "Proceso de inscripción de {{ firstName }}",
     "NewParticipant": "Proceso de inscripción de New Participant",
     "ThankYouPopup": {
-      "Text": "es_Thank you for submitting the survey"
+      "Text": "Gracias por enviar la encuesta"
     }
   },
   "Toolkit": {
     "ActivityActions": {
-      "Continue": "es_Continue",
-      "Start": "es_Start",
-      "View": "es_View",
-      "Edit": "es_Edit"
+      "Continue": "Continuar",
+      "Start": "Empezar",
+      "View": "Ver",
+      "Edit": "Editar"
     },
     "Dashboard": {
       "Actions": "Acciones",
@@ -583,38 +461,38 @@
         "CancelButton": "Cancelar",
         "Fields": {
           "ConfirmEmail": {
-            "Error": "es_Please enter a valid email address",
-            "Placeholder": "es_Email confirmation *"
+            "Error": "Introduzca una dirección de correo electrónico válida",
+            "Placeholder": "Confirmación del correo electrónico*"
           },
           "Email": {
-            "Error": "es_Please enter a valid email address",
+            "Error": "Introduzca una dirección de correo electrónico válida",
             "Placeholder": "Dirección de correo electrónico"
           },
           "FirstName": {
-            "Error": "es_First Name is required",
+            "Error": "El nombre es obligatorio",
             "Placeholder": "Nombre"
           },
           "LastName": {
-            "Error": "es_Last Name is required",
+            "Error": "Los apellidos son obligatorios",
             "Placeholder": "Apellido"
           }
         },
-        "LoadingError": "es_We're sorry, but an error has occurred.",
-        "MatchEmailsError": "es_Please ensure that both email fields are filled in and that the addresses match.",
+        "LoadingError": "Lo sentimos, se ha producido un error.",
+        "MatchEmailsError": "Asegúrese de que los dos campos de correo electrónico estén rellenados y las direcciones coincidan.",
         "Required": "",
-        "SubmitButton": "Unirse a la lista de distribución de correo",
-        "Text": "Ingrese una dirección de correo electrónico y lo mantendremos informado sobre el progreso de la Plataforma global de datos para familias con A-T.",
-        "Title": "Registrarme para mantenerme informado"
+        "SubmitButton": "Unirse",
+        "Text": "Introduzca su correo electrónico más abajo y le mantendremos informado acerca de los avances.\nPuede cancelar la suscripción en cualquier momento.",
+        "Title": "Manténgase informado"
       },
       "SessionWillExpire": {
         "Continue": "Continuar",
         "SignOut": "Cerrar sesión",
-        "Text": "es_To protect your privacy, the system is going to log you out because you have been away for a while. Click “Continue” to stay logged in. Click “Sign Out” if you are done for now.",
-        "Title": "es_Your session will time-out soon"
+        "Text": "Para proteger su privacidad, el sistema va a cerrar su sesión porque lleva ausente un tiempo. Haga clic en \"Continuar\" para permanecer conectado. Haga clic en \"Cerrar sesión\" si ha terminado por ahora.",
+        "Title": "Su sesión caducará pronto"
       }
     },
     "ErrorCodes": {
-      "PASSWORD_RESET_LINK_EXPIRED": "es_Your password reset link has expired."
+      "PASSWORD_RESET_LINK_EXPIRED": "Su enlace de restablecimiento de contraseña ha caducado."
     },
     "ErrorPage": {
       "DefaultText": {
@@ -625,18 +503,18 @@
       "Title": "Lo sentimos, ocurrió un error. Vuelva a intentarlo más tarde."
     },
     "Password": {
-      "InputPlaceholder": "es_Password",
-      "PasswordRequiredError": "es_Password is required",
-      "PasswordWrongError": "es_Incorrect password. Please try again.",
-      "Text": "es_Please enter your password *",
-      "Title": "es_Please enter the password"
+      "InputPlaceholder": "Contraseña",
+      "PasswordRequiredError": "La contraseña es obligatoria",
+      "PasswordWrongError": "Contraseña incorrecta. Vuelva a intentarlo.",
+      "Text": "Introduzca su contraseña*",
+      "Title": "Introduzca la contraseña"
     },
     "SessionExpired": {
-      "Text": "es_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
+      "Text": "Ha estado ausente un tiempo, así que hemos cerrado su sesión como medida de seguridad. Inicie sesión de nuevo y vuelva a la última página donde se encontraba."
     },
     "StayInformed": {
       "Text": "¡Gracias por unirse a la lista de distribución de correo de la Plataforma global de datos para familias con A-T! Lo mantendremos informado sobre esta iniciativa a través de la dirección de correo electrónico que ingresó.",
-      "Title": "es_Stay informed"
+      "Title": "Manténgase informado"
     }
   },
   "WorkflowProgress": {
