--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
@@ -245,10 +245,10 @@
   "Common": {
     "Buttons": {
       "Submit": {
-        "Title": "fr_Submit"
+        "Title": "Envoyer"
       },
       "Expand": {
-        "Title": "fr_Expand"
+        "Title": "Développer"
       }
     },
     "Navigation": {
@@ -261,135 +261,13 @@
       "LearnMore": "En savoir plus",
       "MedicalHistoryQuestionnaire": "Antécédents médicaux",
       "MyAccount": "Mon Compte",
-      "MyDashboard": "fr_My Dashboard",
+      "MyDashboard": "Mon tableau de bord",
       "Next": "Suivant",
       "Previous": "Précédent",
       "SignIn": "Connexion",
-      "Statistics": "fr_Platform Statistics",
-      "Submit": "fr_Submit",
+      "Statistics": "Statistiques de la plateforme",
+      "Submit": "Envoyer",
       "YourParticipants": "Vos participants"
-    }
-  },
-  "DataAccess": {
-    "Assurances": {
-      "AssuranceList": [
-        "fr_Data will only be used for approved research.",
-        "fr_Data confidentiality will be protected and the investigator will never make any attempt at \"re-identification.\"",
-        "fr_There will be no transfer of any part of the dataset to any other investigators or institutions (except between collaborating investigators or any project assistants who answer directly to the Principal Investigator).",
-        "fr_All applicable laws and local institutional policies will be followed.",
-        "fr_Data will not be sold or shared with third parties.",
-        "fr_Accidental transfer of any part of the dataset will be prevented. Adequate security controls are in place, such as secure laptops and storage devices; no downloading is allowed to unsecured network drives or servers.",
-        "fr_Report on the uses of the data, e.g. publications, will be provided to the DAC annually.",
-        "fr_The Global A-T Family Data Platform Dataset will be acknowledged in any publication or presentation resulting from the use of the Dataset.",
-        "fr_Collaborating investigators from the researcher’s institution, as listed in the DAR form, agree to these Assurances.",
-        "fr_These assurances will be agreed to annually."
-      ],
-      "Controls": {
-        "ApplyingSignature": {
-          "Label": "fr_Signature of Applying Researcher"
-        },
-        "Date": {
-          "Label": "fr_Date"
-        }
-      },
-      "Paragraph1": "fr_I agree to the following assurances:",
-      "Title": "fr_Assurances Statement"
-    },
-    "Dataset": {
-      "Controls": {
-        "Genomic": {
-          "Label": "fr_Genomic Data"
-        },
-        "Survey": {
-          "Label": "fr_Clinical Survey Data"
-        }
-      },
-      "Messages": {
-        "FileSizeExceedsTheLimit": "fr_File size exceeds the limit",
-        "ResearcherBiosketch": "fr_Researcher biosketch cannot be empty.",
-        "ResearcherEmail": "fr_Researcher email cannot be empty.",
-        "ResearcherName": "fr_Researcher name cannot be empty.",
-        "ResearcherOrgAddress": "fr_Org address 1 cannot be empty.",
-        "ResearcherOrgCity": "fr_Org city cannot be empty.",
-        "ResearcherOrgCountry": "fr_Org country cannot be empty.",
-        "ResearcherOrgName": "fr_Org name cannot be empty.",
-        "ResearcherOrgZip": "fr_Org zip cannot be empty.",
-        "ResearcherPhone": "fr_Researcher phone cannot include letters.",
-        "ResearcherProjectDescription": "fr_Project description cannot be empty.",
-        "ResearcherSign": "fr_Researcher signature cannot be empty.",
-        "ResearcherUse": "fr_Research use cannot be empty."
-      },
-      "SubTitle1": "fr_Select all applicable options.",
-      "SubTitle2": "fr_Specific Requests",
-      "Text1": "fr_Please state the disease area(s), if any, that this study focuses on.",
-      "Title": "fr_Dataset(s) requested"
-    },
-    "Header": {
-      "Paragraph1": "La plateforme de données internationale pour les familles AT est un projet axé sur les patients et supervisé par les familles et les spécialistes du monde entier, qui permet de mettre à la disposition des chercheurs des informations médicales, génétiques et autres concernant les personnes atteintes d’AT. Cette plateforme permettra aux chercheurs du monde entier d’accéder rapidement, en toute sécurité et efficacement aux données patient importantes dans le but de favoriser les découvertes.",
-      "Paragraph2": "fr_Researchers should request access to the data using this Data Access Request (DAR) form which includes assurances associated with the use of these data sets.",
-      "Paragraph3": "fr_Our Data Access Committee (DAC) will review the DAR form submitted by the researchers and will either approve or disapprove data access.",
-      "Paragraph4": "fr_Researchers will certify that they will abide by the assurances given in this form, including agreeing not to distribute controlled-access data in any form to any third parties other than their own research staff who have agreed to these assurances. For projects that include collaborators at other institutions, collaborating investigators are required to submit separate DAR forms.",
-      "Paragraph5": "fr_Upon receiving access approval, researchers will be provided with specific credentials to authenticate their identity and gain access to the controlled-access datasets. The DAC requests annual reports from researchers about what has been accomplished using the data and any violations of the assurances that may have occurred.",
-      "Title": "fr_Data Access Request"
-    },
-    "OrganizationForm": {
-      "Address1": "fr_Address 1",
-      "Address2": "fr_Address 2",
-      "City": "fr_City/Town",
-      "Country": "Pays",
-      "Department": "fr_Department",
-      "Name": "fr_Organization Name",
-      "State": "État/province",
-      "Title": "fr_Organization Information",
-      "Zip": "fr_Zip/Postal Code"
-    },
-    "ResearcherForm": {
-      "Attachment": "fr_Please attach a CV and/or biographical sketch (PDF files only, 2MB max)",
-      "Email": "fr_Email",
-      "Name": "fr_Name",
-      "Phone": "fr_Phone",
-      "Title": "fr_Researcher Information"
-    },
-    "ResearchProject": {
-      "Article1": {
-        "Paragraph": "fr_Please note that coordinated requests made by researchers who are collaborating on the same project should use the same title.",
-        "Title": "fr_Descriptive Title of Project"
-      },
-      "Article2": {
-        "Paragraph": "fr_Collaborators at different institutions from the PI must complete a separate DAR form.",
-        "Title": "fr_Names and Institutions of Collaborators"
-      },
-      "Article3": {
-        "Paragraph": "fr_Please provide a brief description of the proposed use of the dataset(s) to be reviewed by the Data Access Committee. This statement should be one or two paragraphs in length and include research objectives, the study design and an analysis plan. If you are requesting multiple datasets, please describe how you will use them.",
-        "Title": "fr_Research Use Statement"
-      },
-      "Title": "fr_Research Project Overview"
-    },
-    "TypeResearch": {
-      "Controls": {
-        "Label": "fr_Controls",
-        "Paragraph": "fr_The reason for this request is to increase the number of controls available for a comparison group (e.g., a case-control study)."
-      },
-      "Describe": {
-        "Label": "fr_Please describe"
-      },
-      "DisableStudy": {
-        "Label": "fr_Disease study",
-        "Paragraph": "fr_The primary purpose of the research is to learn more about a particular disease or disorder (e.g., type 2 diabetes), a trait (e.g., blood pressure), or a set of related conditions (e.g., autoimmune diseases, psychiatric disorders)."
-      },
-      "MethodDevelopment": {
-        "Label": "fr_Methods development and validation studies",
-        "Paragraph": "fr_The primary purpose of the research is to develop and/or validate new methods for analyzing or interpreting data (e.g., developing more powerful methods to detect epistatic, gene-environment, or other types of complex interactions in genome-wide association studies). Data will be used for developing and/or validating new methods."
-      },
-      "Other": {
-        "Label": "fr_Other"
-      },
-      "Population": {
-        "Label": "fr_Population structure or normal variation studies",
-        "Paragraph": "fr_The primary purpose of the research is to understand variation in the general population (e.g., genetic substructure of a population)."
-      },
-      "SubTitle": "fr_Select all applicable options.",
-      "Title": "fr_Type of Research"
     }
   },
   "Footer": {
@@ -452,32 +330,32 @@
   "SDK": {
     "DownloadButton": "Télécharger l’examen",
     "CancelButton": "Annuler",
-    "CloseButton": "fr_Close",
-    "CommunicationError": "fr_There was a problem saving your data. Please check the form and your answers before submitting",
+    "CloseButton": "Fermer",
+    "CommunicationError": "Un problème est survenu lors de l'enregistrement de vos données. Veuillez vérifier le formulaire et vos réponses avant de l'envoyer.",
     "Dashboard": {
       "Text": "",
       "Title": "Ma console"
     },
     "DatePicker": {
-      "April": "fr_April",
-      "August": "fr_August",
-      "Day": "fr_Choose day...",
-      "December": "fr_December",
-      "February": "fr_February",
-      "January": "fr_January",
-      "July": "fr_July",
-      "June": "fr_June",
-      "March": "fr_March",
-      "May": "fr_May",
-      "Month": "fr_Choose month...",
-      "November": "fr_November",
-      "October": "fr_October",
-      "September": "fr_September",
-      "Year": "fr_Choose year..."
+      "April": "Avril",
+      "August": "Août",
+      "Day": "Choisir le jour...",
+      "December": "Décembre",
+      "February": "Février",
+      "January": "Janvier",
+      "July": "Juillet",
+      "June": "Juin",
+      "March": "Mars",
+      "May": "Mai",
+      "Month": "Choisir le mois...",
+      "November": "Novembre",
+      "October": "Octobre",
+      "September": "Septembre",
+      "Year": "Choisir l'année..."
     },
     "DetailsPlaceholder": {
-      "PluralForm": "fr_characters remaining",
-      "SingularForm": "fr_character remaining"
+      "PluralForm": "caractères restants",
+      "SingularForm": "caractère restant"
     },
     "DoNotAssent": "Ne donne pas mon assentiment",
     "DoNotConsent": "Ne donne pas mon consentement",
@@ -500,73 +378,73 @@
     "RegisterButton": "S’enregistrer",
     "SaveAndSubmit": "Enregistrer et soumettre",
     "SaveAndSubmitEnrollment": "Enregistrer et soumettre l’inscription",
-    "SavingButton": "fr_Saving",
+    "SavingButton": "Enregistrement",
     "SignAndAssent": "Signature et assentiment",
     "SignAndConsent": "Signature et consentement",
     "StartOrResume": "Commencer/reprendre",
-    "SubmitButton": "fr_Submit",
+    "SubmitButton": "Envoyer",
     "SignInOut": {
       "SignOut": "Déconnexion"
     },
     "Title": {
-      "Alert": "fr_Your session will time-out soon",
-      "Default": "fr_The Global A-T Family Data Platform"
+      "Alert": "Votre session va bientôt expirer.",
+      "Default": "Plateforme de données internationale sur les familles AT"
     },
     "TooltipAlt": "Le nom de qui dois-je saisir ?",
     "UserActivities": {
       "ActivityActions": "Actions",
-      "ActivityDate": "fr_Created",
-      "ActivityName": "fr_Form",
+      "ActivityDate": "Créé",
+      "ActivityName": "Formulaire",
       "ActivityStatus": "Statut",
       "ActivityStatuses": {
         "COMPLETE": "Rempli",
         "CREATED": "Non commencé",
         "IN_PROGRESS": "En cours"
       },
-      "QuestionCount": "fr_{{ answered }} / {{ total }} Answered",
-      "Summary": "fr_Summary",
+      "QuestionCount": "Réponses: {{ answered }} / {{ total }}",
+      "Summary": "Résumé",
       "SurveysToComplete": {
-        "Plural": "fr_{{ count }} surveys to complete",
-        "Singular": "fr_{{ count }} survey to complete"
+        "Plural": "{{ count }} enquêtes à remplir",
+        "Singular": "{{ count }} enquête à remplir"
       }
     },
     "UserMenu": {
       "SignOutButton": "Déconnexion"
     },
     "UserPreferences": {
-      "UserPreferencesGender": "fr_Sex",
-      "UserPreferencesLocale": "fr_Preferred language",
-      "UserPreferencesTitle": "fr_User preferences"
+      "UserPreferencesGender": "Sexe",
+      "UserPreferencesLocale": "Langue préférée",
+      "UserPreferencesTitle": "Préférences utilisateur"
     },
-    "ValidateError": "fr_Submission cannot proceed. Please review messages in form for details.",
+    "ValidateError": "L'envoi ne peut être effectué. Veuillez consulter les messages dans le formulaire pour plus de détails.",
     "Validators": {
-      "DateNavyValidationRule": "[FR] Entered date is invalid"
+      "DateNavyValidationRule": "La date saisie n'est pas valide"
     }
   },
   "Statistics": {
-    "Title": "fr_The A-T Family Data Platform by the Numbers",
+    "Title": "Plateforme de données sur les familles AT en chiffres",
     "CountList": {
-      "totalParticipantsCount": "fr_Total number of participants",
-      "countriesCount": "fr_Countries represented",
-      "genomeStudyParticipantsCount": "fr_People consenting to participate in genome sequencing",
-      "governedParticipantsCount": "fr_Children enrolled by their parents",
-      "selfEnrolledParticipantsCount": "fr_Self-enrolled participants"
+      "totalParticipantsCount": "Nombre total de participants",
+      "countriesCount": "Pays représentés",
+      "genomeStudyParticipantsCount": "Personnes consentant à participer au séquençage du génome",
+      "governedParticipantsCount": "Enfants inscrits par leurs parents",
+      "selfEnrolledParticipantsCount": "Participants inscrits librement"
     },
-    "Subtitle": "fr_Countries represented"
+    "Subtitle": "Pays représentés"
   },
   "Survey": {
     "Self": "{{ firstName }} - processus d’inscription",
     "NewParticipant": "New Participant - processus d’inscription",
     "ThankYouPopup": {
-      "Text": "fr_Thank you for submitting the survey"
+      "Text": "Merci d'avoir envoyé l'enquête"
     }
   },
   "Toolkit": {
     "ActivityActions": {
-      "Continue": "fr_Continue",
-      "Start": "fr_Start",
-      "View": "fr_View",
-      "Edit": "fr_Edit"
+      "Continue": "Continuer",
+      "Start": "Commencer",
+      "View": "Afficher",
+      "Edit": "Modifier"
     },
     "Dashboard": {
       "Actions": "Actions",
@@ -583,38 +461,38 @@
         "CancelButton": "Annuler",
         "Fields": {
           "ConfirmEmail": {
-            "Error": "fr_Please enter a valid email address",
-            "Placeholder": "fr_Email confirmation *"
+            "Error": "Veuillez saisir une adresse e-mail valide.",
+            "Placeholder": "Confirmation de l'adresse e-mail *"
           },
           "Email": {
-            "Error": "fr_Please enter a valid email address",
+            "Error": "Veuillez saisir une adresse e-mail valide.",
             "Placeholder": "Adresse e-mail"
           },
           "FirstName": {
-            "Error": "fr_First Name is required",
+            "Error": "Le prénom est requis.",
             "Placeholder": "Prénom"
           },
           "LastName": {
-            "Error": "fr_Last Name is required",
+            "Error": "Le nom de famille est requis.",
             "Placeholder": "Nom"
           }
         },
-        "LoadingError": "fr_We're sorry, but an error has occurred.",
-        "MatchEmailsError": "fr_Please ensure that both email fields are filled in and that the addresses match.",
+        "LoadingError": "Une erreur est survenue.",
+        "MatchEmailsError": "Vérifiez que les deux champs d'adresse e-mail sont remplis et que les adresses correspondent.",
         "Required": "",
-        "SubmitButton": "S'abonner à la liste de diffusion",
-        "Text": "Fournissez-nous une adresse e-mail et nous vous tiendrons au courant de l’avancement de la plateforme de données internationale sur les familles AT.",
-        "Title": "S’inscrire pour rester informé"
+        "SubmitButton": "S'inscrire",
+        "Text": "Renseignez votre adresse e-mail ci-dessous et nous vous tiendrons au courant des évolutions.\nVous pouvez vous désabonner à tout moment.",
+        "Title": "Rester informé"
       },
       "SessionWillExpire": {
         "Continue": "Continuer",
         "SignOut": "Déconnexion",
-        "Text": "fr_To protect your privacy, the system is going to log you out because you have been away for a while. Click “Continue” to stay logged in. Click “Sign Out” if you are done for now.",
-        "Title": "fr_Your session will time-out soon"
+        "Text": "Le système va vous déconnecter afin de protéger votre confidentialité, car vous avez été absent pendant un certain temps. Cliquez sur Continuer pour rester connecté. Cliquez sur Déconnexion si vous avez terminé pour l'instant.",
+        "Title": "Votre session va bientôt expirer."
       }
     },
     "ErrorCodes": {
-      "PASSWORD_RESET_LINK_EXPIRED": "fr_Your password reset link has expired."
+      "PASSWORD_RESET_LINK_EXPIRED": "Le lien de réinitialisation de votre mot de passe a expiré."
     },
     "ErrorPage": {
       "DefaultText": {
@@ -625,18 +503,18 @@
       "Title": "Une erreur est survenue. Veuillez réessayer plus tard."
     },
     "Password": {
-      "InputPlaceholder": "fr_Password",
-      "PasswordRequiredError": "fr_Password is required",
-      "PasswordWrongError": "fr_Incorrect password. Please try again.",
-      "Text": "fr_Please enter your password *",
-      "Title": "fr_Please enter the password"
+      "InputPlaceholder": "Mot de passe",
+      "PasswordRequiredError": "Le mot de passe est requis.",
+      "PasswordWrongError": "Mot de passe erroné. Veuillez réessayer.",
+      "Text": "Veuillez saisir votre mot de passe *",
+      "Title": "Veuillez saisir le mot de passe."
     },
     "SessionExpired": {
-      "Text": "fr_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
+      "Text": "Nous vous avons déconnecté par mesure de sécurité car vous avez été absent pendant un certain temps. Veuillez vous connecter à nouveau pour revenir à la dernière page sur laquelle vous vous trouviez."
     },
     "StayInformed": {
-      "Text": "Merci de vous être inscrit à la liste de diffusion de la plateforme de données internationale sur les familles AT. Nous vous tiendrons informé(e) sur cette initiative grâce à l’adresse e-mail que vous avez fournie.",
-      "Title": "fr_Stay informed"
+      "Text": "Nous vous remercions pour votre inscription à la liste de diffusion. Nous vous tiendrons informé des évolutions. Vous pouvez vous désabonner à tout moment. Si vous avez des questions concernant votre statut dans le cadre du projet, veuillez envoyer un e-mail à",
+      "Title": "Rester informé"
     }
   },
   "WorkflowProgress": {
