--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -245,10 +245,10 @@
   "Common": {
     "Buttons": {
       "Submit": {
-        "Title": "it_Submit"
+        "Title": "Invia"
       },
       "Expand": {
-        "Title": "it_Expand"
+        "Title": "Espandi"
       }
     },
     "Navigation": {
@@ -261,135 +261,13 @@
       "LearnMore": "Per saperne di più",
       "MedicalHistoryQuestionnaire": "Storia clinica",
       "MyAccount": "Il Mio Account",
-      "MyDashboard": "it_My Dashboard",
+      "MyDashboard": "Il mio dashboard",
       "Next": "Avanti",
       "Previous": "Indietro",
       "SignIn": "Accedi",
-      "Statistics": "it_Platform Statistics",
-      "Submit": "it_Submit",
+      "Statistics": "Statistiche piattaforma",
+      "Submit": "Invia",
       "YourParticipants": "I tuoi partecipanti"
-    }
-  },
-  "DataAccess": {
-    "Assurances": {
-      "AssuranceList": [
-        "it_Data will only be used for approved research.",
-        "it_Data confidentiality will be protected and the investigator will never make any attempt at \"re-identification.\"",
-        "it_There will be no transfer of any part of the dataset to any other investigators or institutions (except between collaborating investigators or any project assistants who answer directly to the Principal Investigator).",
-        "it_All applicable laws and local institutional policies will be followed.",
-        "it_Data will not be sold or shared with third parties.",
-        "it_Accidental transfer of any part of the dataset will be prevented. Adequate security controls are in place, such as secure laptops and storage devices; no downloading is allowed to unsecured network drives or servers.",
-        "it_Report on the uses of the data, e.g. publications, will be provided to the DAC annually.",
-        "it_The Global A-T Family Data Platform Dataset will be acknowledged in any publication or presentation resulting from the use of the Dataset.",
-        "it_Collaborating investigators from the researcher’s institution, as listed in the DAR form, agree to these Assurances.",
-        "it_These assurances will be agreed to annually."
-      ],
-      "Controls": {
-        "ApplyingSignature": {
-          "Label": "it_Signature of Applying Researcher"
-        },
-        "Date": {
-          "Label": "it_Date"
-        }
-      },
-      "Paragraph1": "it_I agree to the following assurances:",
-      "Title": "it_Assurances Statement"
-    },
-    "Dataset": {
-      "Controls": {
-        "Genomic": {
-          "Label": "it_Genomic Data"
-        },
-        "Survey": {
-          "Label": "it_Clinical Survey Data"
-        }
-      },
-      "Messages": {
-        "FileSizeExceedsTheLimit": "it_File size exceeds the limit",
-        "ResearcherBiosketch": "it_Researcher biosketch cannot be empty.",
-        "ResearcherEmail": "it_Researcher email cannot be empty.",
-        "ResearcherName": "it_Researcher name cannot be empty.",
-        "ResearcherOrgAddress": "it_Org address 1 cannot be empty.",
-        "ResearcherOrgCity": "it_Org city cannot be empty.",
-        "ResearcherOrgCountry": "it_Org country cannot be empty.",
-        "ResearcherOrgName": "it_Org name cannot be empty.",
-        "ResearcherOrgZip": "it_Org zip cannot be empty.",
-        "ResearcherPhone": "it_Researcher phone cannot include letters.",
-        "ResearcherProjectDescription": "it_Project description cannot be empty.",
-        "ResearcherSign": "it_Researcher signature cannot be empty.",
-        "ResearcherUse": "it_Research use cannot be empty."
-      },
-      "SubTitle1": "it_Select all applicable options.",
-      "SubTitle2": "it_Specific Requests",
-      "Text1": "it_Please state the disease area(s), if any, that this study focuses on.",
-      "Title": "it_Dataset(s) requested"
-    },
-    "Header": {
-      "Paragraph1": "La Piattaforma globale di dati sulle famiglie con A-T è uno sforzo incentrato sui pazienti e supervisionato da famiglie con A-T e da specialisti di tutto il mondo attraverso il quale è possibile condividere con i ricercatori informazioni sanitarie, dati genetici ed eventualmente dati di altro tipo sulle persone affette da A-T. Questa piattaforma permetterà ai ricercatori di accedere in modo rapido, sicuro ed efficiente da tutto il mondo a dati importanti dei pazienti, con la speranza che ciò possa condurre a nuove scoperte.",
-      "Paragraph2": "it_Researchers should request access to the data using this Data Access Request (DAR) form which includes assurances associated with the use of these data sets.",
-      "Paragraph3": "it_Our Data Access Committee (DAC) will review the DAR form submitted by the researchers and will either approve or disapprove data access.",
-      "Paragraph4": "it_Researchers will certify that they will abide by the assurances given in this form, including agreeing not to distribute controlled-access data in any form to any third parties other than their own research staff who have agreed to these assurances. For projects that include collaborators at other institutions, collaborating investigators are required to submit separate DAR forms.",
-      "Paragraph5": "it_Upon receiving access approval, researchers will be provided with specific credentials to authenticate their identity and gain access to the controlled-access datasets. The DAC requests annual reports from researchers about what has been accomplished using the data and any violations of the assurances that may have occurred.",
-      "Title": "it_Data Access Request"
-    },
-    "OrganizationForm": {
-      "Address1": "it_Address 1",
-      "Address2": "it_Address 2",
-      "City": "it_City/Town",
-      "Country": "Paese",
-      "Department": "it_Department",
-      "Name": "it_Organization Name",
-      "State": "Stato/Provincia",
-      "Title": "it_Organization Information",
-      "Zip": "it_Zip/Postal Code"
-    },
-    "ResearcherForm": {
-      "Attachment": "it_Please attach a CV and/or biographical sketch (PDF files only, 2MB max)",
-      "Email": "it_Email",
-      "Name": "it_Name",
-      "Phone": "it_Phone",
-      "Title": "it_Researcher Information"
-    },
-    "ResearchProject": {
-      "Article1": {
-        "Paragraph": "it_Please note that coordinated requests made by researchers who are collaborating on the same project should use the same title.",
-        "Title": "it_Descriptive Title of Project"
-      },
-      "Article2": {
-        "Paragraph": "it_Collaborators at different institutions from the PI must complete a separate DAR form.",
-        "Title": "it_Names and Institutions of Collaborators"
-      },
-      "Article3": {
-        "Paragraph": "it_Please provide a brief description of the proposed use of the dataset(s) to be reviewed by the Data Access Committee. This statement should be one or two paragraphs in length and include research objectives, the study design and an analysis plan. If you are requesting multiple datasets, please describe how you will use them.",
-        "Title": "it_Research Use Statement"
-      },
-      "Title": "it_Research Project Overview"
-    },
-    "TypeResearch": {
-      "Controls": {
-        "Label": "it_Controls",
-        "Paragraph": "it_The reason for this request is to increase the number of controls available for a comparison group (e.g., a case-control study)."
-      },
-      "Describe": {
-        "Label": "it_Please describe"
-      },
-      "DisableStudy": {
-        "Label": "it_Disease study",
-        "Paragraph": "it_The primary purpose of the research is to learn more about a particular disease or disorder (e.g., type 2 diabetes), a trait (e.g., blood pressure), or a set of related conditions (e.g., autoimmune diseases, psychiatric disorders)."
-      },
-      "MethodDevelopment": {
-        "Label": "it_Methods development and validation studies",
-        "Paragraph": "it_The primary purpose of the research is to develop and/or validate new methods for analyzing or interpreting data (e.g., developing more powerful methods to detect epistatic, gene-environment, or other types of complex interactions in genome-wide association studies). Data will be used for developing and/or validating new methods."
-      },
-      "Other": {
-        "Label": "it_Other"
-      },
-      "Population": {
-        "Label": "it_Population structure or normal variation studies",
-        "Paragraph": "it_The primary purpose of the research is to understand variation in the general population (e.g., genetic substructure of a population)."
-      },
-      "SubTitle": "it_Select all applicable options.",
-      "Title": "it_Type of Research"
     }
   },
   "Footer": {
@@ -452,32 +330,32 @@
   "SDK": {
     "DownloadButton": "Scarica revisione",
     "CancelButton": "Annulla",
-    "CloseButton": "it_Close",
-    "CommunicationError": "it_There was a problem saving your data. Please check the form and your answers before submitting",
+    "CloseButton": "Chiudi",
+    "CommunicationError": "Si è verificato un problema durante il salvataggio dei dati. Controlla il modulo e le tue risposte prima dell'invio",
     "Dashboard": {
       "Text": "",
       "Title": "La mia console"
     },
     "DatePicker": {
-      "April": "it_April",
-      "August": "it_August",
-      "Day": "it_Choose day...",
-      "December": "it_December",
-      "February": "it_February",
-      "January": "it_January",
-      "July": "it_July",
-      "June": "it_June",
-      "March": "it_March",
-      "May": "it_May",
-      "Month": "it_Choose month...",
-      "November": "it_November",
-      "October": "it_October",
-      "September": "it_September",
-      "Year": "it_Choose year..."
+      "April": "Aprile",
+      "August": "Agosto",
+      "Day": "Scegli il giorno...",
+      "December": "Dicembre",
+      "February": "Febbraio",
+      "January": "Gennaio",
+      "July": "Luglio",
+      "June": "Giugno",
+      "March": "Marzo",
+      "May": "Maggio",
+      "Month": "Scegli il mese...",
+      "November": "Novembre",
+      "October": "Ottobre",
+      "September": "Settembre",
+      "Year": "Scegli l'anno..."
     },
     "DetailsPlaceholder": {
-      "PluralForm": "it_characters remaining",
-      "SingularForm": "it_character remaining"
+      "PluralForm": "caratteri rimanenti",
+      "SingularForm": "carattere rimanente"
     },
     "DoNotAssent": "Non rilascio l'assenso",
     "DoNotConsent": "Non rilascio il consenso",
@@ -500,73 +378,73 @@
     "RegisterButton": "Registra",
     "SaveAndSubmit": "Salva e invia",
     "SaveAndSubmitEnrollment": "Salva e invia arruolamento",
-    "SavingButton": "it_Saving",
+    "SavingButton": "Salvataggio",
     "SignAndAssent": "Firma e assenso",
     "SignAndConsent": "Firma e consenso",
     "StartOrResume": "Inizia/Riprendi",
-    "SubmitButton": "it_Submit",
+    "SubmitButton": "Invia",
     "SignInOut": {
       "SignOut": "Disconnetti"
     },
     "Title": {
-      "Alert": "it_Your session will time-out soon",
-      "Default": "it_The Global A-T Family Data Platform"
+      "Alert": "Si verificherà presto il timeout della sessione",
+      "Default": "La Piattaforma globale di dati sulle famiglie con A-T"
     },
     "TooltipAlt": "Devo immettere il nome di chi?",
     "UserActivities": {
       "ActivityActions": "Azioni",
-      "ActivityDate": "it_Created",
-      "ActivityName": "it_Form",
+      "ActivityDate": "Creazione",
+      "ActivityName": "Modulo",
       "ActivityStatus": "Stato",
       "ActivityStatuses": {
         "COMPLETE": "Completato",
         "CREATED": "Non iniziato",
         "IN_PROGRESS": "In corso"
       },
-      "QuestionCount": "it_{{ answered }} / {{ total }} Answered",
-      "Summary": "it_Summary",
+      "QuestionCount": "risposte{{ answered }} / {{ total }} risposte",
+      "Summary": "Riepilogo",
       "SurveysToComplete": {
-        "Plural": "it_{{ count }} surveys to complete",
-        "Singular": "it_{{ count }} survey to complete"
+        "Plural": "{{ count }} sondaggi da completare",
+        "Singular": "{{ count }} sondaggio da completare"
       }
     },
     "UserMenu": {
       "SignOutButton": "Disconnetti"
     },
     "UserPreferences": {
-      "UserPreferencesGender": "it_Sex",
-      "UserPreferencesLocale": "it_Preferred language",
-      "UserPreferencesTitle": "it_User preferences"
+      "UserPreferencesGender": "Sesso",
+      "UserPreferencesLocale": "Lingua preferita",
+      "UserPreferencesTitle": "Preferenze utente"
     },
-    "ValidateError": "it_Submission cannot proceed. Please review messages in form for details.",
+    "ValidateError": "Impossibile procedere con l'invio. Rivedi i messaggi nel modulo per i dettagli.",
     "Validators": {
-      "DateNavyValidationRule": "[IT] Entered date is invalid"
+      "DateNavyValidationRule": "La data inserita non è valida"
     }
   },
   "Statistics": {
-    "Title": "it_The A-T Family Data Platform by the Numbers",
+    "Title": "I numeri della Piattaforma globale di dati sulle famiglie con A-T",
     "CountList": {
-      "totalParticipantsCount": "it_Total number of participants",
-      "countriesCount": "it_Countries represented",
-      "genomeStudyParticipantsCount": "it_People consenting to participate in genome sequencing",
-      "governedParticipantsCount": "it_Children enrolled by their parents",
-      "selfEnrolledParticipantsCount": "it_Self-enrolled participants"
+      "totalParticipantsCount": "Numero totale dei partecipanti",
+      "countriesCount": "Paesi rappresentati",
+      "genomeStudyParticipantsCount": "Persone consenzienti a partecipare al sequenziamento del genoma",
+      "governedParticipantsCount": "Bambini iscritti dai loro genitori",
+      "selfEnrolledParticipantsCount": "Partecipanti iscritti autonomamente"
     },
-    "Subtitle": "it_Countries represented"
+    "Subtitle": "Paesi rappresentati"
   },
   "Survey": {
     "Self": "Processo di arruolamento di {{ firstName }}",
     "NewParticipant": "Processo di arruolamento di New Participant",
     "ThankYouPopup": {
-      "Text": "it_Thank you for submitting the survey"
+      "Text": "Grazie per aver partecipato al sondaggio"
     }
   },
   "Toolkit": {
     "ActivityActions": {
-      "Continue": "it_Continue",
-      "Start": "it_Start",
-      "View": "it_View",
-      "Edit": "it_Edit"
+      "Continue": "Continua",
+      "Start": "Inizia",
+      "View": "Visualizza",
+      "Edit": "Modifica"
     },
     "Dashboard": {
       "Actions": "Azioni",
@@ -583,24 +461,24 @@
         "CancelButton": "Annulla",
         "Fields": {
           "ConfirmEmail": {
-            "Error": "it_Please enter a valid email address",
-            "Placeholder": "it_Email confirmation *"
+            "Error": "Inserisci un indirizzo di posta elettronica valido",
+            "Placeholder": "Conferma e-mail *"
           },
           "Email": {
-            "Error": "it_Please enter a valid email address",
+            "Error": "Inserisci un indirizzo di posta elettronica valido",
             "Placeholder": "Indirizzo di posta elettronica"
           },
           "FirstName": {
-            "Error": "it_First Name is required",
+            "Error": "Il nome è obbligatorio",
             "Placeholder": "Nome"
           },
           "LastName": {
-            "Error": "it_Last Name is required",
+            "Error": "Il cognome è obbligatorio",
             "Placeholder": "Cognome"
           }
         },
-        "LoadingError": "it_We're sorry, but an error has occurred.",
-        "MatchEmailsError": "it_Please ensure that both email fields are filled in and that the addresses match.",
+        "LoadingError": "Siamo spiacenti, si è verificato un errore.",
+        "MatchEmailsError": "Assicurati che entrambi i campi dell'e-mail siano compilati e che gli indirizzi coincidano.",
         "Required": "",
         "SubmitButton": "Iscriviti alla mailing list",
         "Text": "Indicaci un indirizzo di posta elettronica e ti manterremo informato/a sui progressi della Piattaforma globale di dati sulle famiglie con A-T.",
@@ -609,12 +487,12 @@
       "SessionWillExpire": {
         "Continue": "Continua",
         "SignOut": "Disconnetti",
-        "Text": "it_To protect your privacy, the system is going to log you out because you have been away for a while. Click “Continue” to stay logged in. Click “Sign Out” if you are done for now.",
-        "Title": "it_Your session will time-out soon"
+        "Text": "Poiché è trascorso un po' di tempo senza eseguire operazioni, il sistema ti disconnetterà per tutelare la tua privacy. Fai clic su \"Continua\" per restare connesso. Fai clic su \"Disconnetti\" se hai terminato.",
+        "Title": "Si verificherà presto il timeout della sessione"
       }
     },
     "ErrorCodes": {
-      "PASSWORD_RESET_LINK_EXPIRED": "it_Your password reset link has expired."
+      "PASSWORD_RESET_LINK_EXPIRED": "Il link di reimpostazione password è scaduto."
     },
     "ErrorPage": {
       "DefaultText": {
@@ -625,18 +503,18 @@
       "Title": "Siamo spiacenti, si è verificato un errore. Riprova più tardi."
     },
     "Password": {
-      "InputPlaceholder": "it_Password",
-      "PasswordRequiredError": "it_Password is required",
-      "PasswordWrongError": "it_Incorrect password. Please try again.",
-      "Text": "it_Please enter your password *",
-      "Title": "it_Please enter the password"
+      "InputPlaceholder": "Password",
+      "PasswordRequiredError": "La password è obbligatoria",
+      "PasswordWrongError": "Password errata. Riprova.",
+      "Text": "Inserisci la password *",
+      "Title": "Inserisci la password"
     },
     "SessionExpired": {
-      "Text": "it_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
+      "Text": "Il sistema ha rilevato il protrarsi della tua inattività e ti ha disconnesso come precauzione di sicurezza. Accedi nuovamente per tornare all'ultima pagina in cui ti trovavi."
     },
     "StayInformed": {
       "Text": "Grazie per esserti iscritto/a alla mailing list della Piattaforma globale di dati sulle famiglie con A-T. Ti manterremo informato/a su questa iniziativa tramite l'indirizzo di posta elettronica che hai fornito.",
-      "Title": "it_Stay informed"
+      "Title": "Resta informato/a"
     }
   },
   "WorkflowProgress": {
