--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
@@ -245,10 +245,10 @@
   "Common": {
     "Buttons": {
       "Submit": {
-        "Title": "pl_Submit"
+        "Title": "Prześlij"
       },
       "Expand": {
-        "Title": "pl_Expand"
+        "Title": "Rozwiń"
       }
     },
     "Navigation": {
@@ -261,135 +261,13 @@
       "LearnMore": "Dowiedz się więcej",
       "MedicalHistoryQuestionnaire": "Dokumentacja medyczna",
       "MyAccount": "Moje konto",
-      "MyDashboard": "pl_My Dashboard",
+      "MyDashboard": "Mój pulpit",
       "Next": "Dalej",
       "Previous": "Wstecz",
       "SignIn": "Zaloguj się",
-      "Statistics": "pl_Platform Statistics",
-      "Submit": "pl_Submit",
+      "Statistics": "Statystyki platformy",
+      "Submit": "Prześlij",
       "YourParticipants": "Twoi uczestnicy"
-    }
-  },
-  "DataAccess": {
-    "Assurances": {
-      "AssuranceList": [
-        "pl_Data will only be used for approved research.",
-        "pl_Data confidentiality will be protected and the investigator will never make any attempt at \"re-identification.\"",
-        "pl_There will be no transfer of any part of the dataset to any other investigators or institutions (except between collaborating investigators or any project assistants who answer directly to the Principal Investigator).",
-        "pl_All applicable laws and local institutional policies will be followed.",
-        "pl_Data will not be sold or shared with third parties.",
-        "pl_Accidental transfer of any part of the dataset will be prevented. Adequate security controls are in place, such as secure laptops and storage devices; no downloading is allowed to unsecured network drives or servers.",
-        "pl_Report on the uses of the data, e.g. publications, will be provided to the DAC annually.",
-        "pl_The Global A-T Family Data Platform Dataset will be acknowledged in any publication or presentation resulting from the use of the Dataset.",
-        "pl_Collaborating investigators from the researcher’s institution, as listed in the DAR form, agree to these Assurances.",
-        "pl_These assurances will be agreed to annually."
-      ],
-      "Controls": {
-        "ApplyingSignature": {
-          "Label": "pl_Signature of Applying Researcher"
-        },
-        "Date": {
-          "Label": "pl_Date"
-        }
-      },
-      "Paragraph1": "pl_I agree to the following assurances:",
-      "Title": "pl_Assurances Statement"
-    },
-    "Dataset": {
-      "Controls": {
-        "Genomic": {
-          "Label": "pl_Genomic Data"
-        },
-        "Survey": {
-          "Label": "pl_Clinical Survey Data"
-        }
-      },
-      "Messages": {
-        "FileSizeExceedsTheLimit": "pl_File size exceeds the limit",
-        "ResearcherBiosketch": "pl_Researcher biosketch cannot be empty.",
-        "ResearcherEmail": "pl_Researcher email cannot be empty.",
-        "ResearcherName": "pl_Researcher name cannot be empty.",
-        "ResearcherOrgAddress": "pl_Org address 1 cannot be empty.",
-        "ResearcherOrgCity": "pl_Org city cannot be empty.",
-        "ResearcherOrgCountry": "pl_Org country cannot be empty.",
-        "ResearcherOrgName": "pl_Org name cannot be empty.",
-        "ResearcherOrgZip": "pl_Org zip cannot be empty.",
-        "ResearcherPhone": "pl_Researcher phone cannot include letters.",
-        "ResearcherProjectDescription": "pl_Project description cannot be empty.",
-        "ResearcherSign": "pl_Researcher signature cannot be empty.",
-        "ResearcherUse": "pl_Research use cannot be empty."
-      },
-      "SubTitle1": "pl_Select all applicable options.",
-      "SubTitle2": "pl_Specific Requests",
-      "Text1": "pl_Please state the disease area(s), if any, that this study focuses on.",
-      "Title": "pl_Dataset(s) requested"
-    },
-    "Header": {
-      "Paragraph1": "Ogólnoświatowa platforma danych stowarzyszenia rodzin z A-T prowadzona jest wspólnym wysiłkiem pacjentów pod nadzorem rodzin i ekspertów na całym świecie. Dzięki niej informacje zdrowotne, genetyczne, ale i inne, mogą zostać przekazane naukowcom. Platforma ta umożliwi badaczom szybki, bezpieczny i sprawny dostęp do ważnych informacji o pacjentach z całego świata, co może przyczynić się do nowych odkryć.",
-      "Paragraph2": "pl_Researchers should request access to the data using this Data Access Request (DAR) form which includes assurances associated with the use of these data sets.",
-      "Paragraph3": "pl_Our Data Access Committee (DAC) will review the DAR form submitted by the researchers and will either approve or disapprove data access.",
-      "Paragraph4": "pl_Researchers will certify that they will abide by the assurances given in this form, including agreeing not to distribute controlled-access data in any form to any third parties other than their own research staff who have agreed to these assurances. For projects that include collaborators at other institutions, collaborating investigators are required to submit separate DAR forms.",
-      "Paragraph5": "pl_Upon receiving access approval, researchers will be provided with specific credentials to authenticate their identity and gain access to the controlled-access datasets. The DAC requests annual reports from researchers about what has been accomplished using the data and any violations of the assurances that may have occurred.",
-      "Title": "pl_Data Access Request"
-    },
-    "OrganizationForm": {
-      "Address1": "pl_Address 1",
-      "Address2": "pl_Address 2",
-      "City": "pl_City/Town",
-      "Country": "Kraj",
-      "Department": "pl_Department",
-      "Name": "pl_Organization Name",
-      "State": "Stan/prowincja",
-      "Title": "pl_Organization Information",
-      "Zip": "pl_Zip/Postal Code"
-    },
-    "ResearcherForm": {
-      "Attachment": "pl_Please attach a CV and/or biographical sketch (PDF files only, 2MB max)",
-      "Email": "pl_Email",
-      "Name": "pl_Name",
-      "Phone": "pl_Phone",
-      "Title": "pl_Researcher Information"
-    },
-    "ResearchProject": {
-      "Article1": {
-        "Paragraph": "pl_Please note that coordinated requests made by researchers who are collaborating on the same project should use the same title.",
-        "Title": "pl_Descriptive Title of Project"
-      },
-      "Article2": {
-        "Paragraph": "pl_Collaborators at different institutions from the PI must complete a separate DAR form.",
-        "Title": "pl_Names and Institutions of Collaborators"
-      },
-      "Article3": {
-        "Paragraph": "pl_Please provide a brief description of the proposed use of the dataset(s) to be reviewed by the Data Access Committee. This statement should be one or two paragraphs in length and include research objectives, the study design and an analysis plan. If you are requesting multiple datasets, please describe how you will use them.",
-        "Title": "pl_Research Use Statement"
-      },
-      "Title": "pl_Research Project Overview"
-    },
-    "TypeResearch": {
-      "Controls": {
-        "Label": "pl_Controls",
-        "Paragraph": "pl_The reason for this request is to increase the number of controls available for a comparison group (e.g., a case-control study)."
-      },
-      "Describe": {
-        "Label": "pl_Please describe"
-      },
-      "DisableStudy": {
-        "Label": "pl_Disease study",
-        "Paragraph": "pl_The primary purpose of the research is to learn more about a particular disease or disorder (e.g., type 2 diabetes), a trait (e.g., blood pressure), or a set of related conditions (e.g., autoimmune diseases, psychiatric disorders)."
-      },
-      "MethodDevelopment": {
-        "Label": "pl_Methods development and validation studies",
-        "Paragraph": "pl_The primary purpose of the research is to develop and/or validate new methods for analyzing or interpreting data (e.g., developing more powerful methods to detect epistatic, gene-environment, or other types of complex interactions in genome-wide association studies). Data will be used for developing and/or validating new methods."
-      },
-      "Other": {
-        "Label": "pl_Other"
-      },
-      "Population": {
-        "Label": "pl_Population structure or normal variation studies",
-        "Paragraph": "pl_The primary purpose of the research is to understand variation in the general population (e.g., genetic substructure of a population)."
-      },
-      "SubTitle": "pl_Select all applicable options.",
-      "Title": "pl_Type of Research"
     }
   },
   "Footer": {
@@ -452,32 +330,32 @@
   "SDK": {
     "DownloadButton": "Pobierz ocenę",
     "CancelButton": "Anuluj",
-    "CloseButton": "pl_Close",
-    "CommunicationError": "pl_There was a problem saving your data. Please check the form and your answers before submitting",
+    "CloseButton": "Zamknij",
+    "CommunicationError": "Podczas zapisywania danych wystąpił problem. Przed wysłaniem należy sprawdzić formularz i swoje odpowiedzi",
     "Dashboard": {
       "Text": "",
       "Title": "Moja konsola"
     },
     "DatePicker": {
-      "April": "pl_April",
-      "August": "pl_August",
-      "Day": "pl_Choose day...",
-      "December": "pl_December",
-      "February": "pl_February",
-      "January": "pl_January",
-      "July": "pl_July",
-      "June": "pl_June",
-      "March": "pl_March",
-      "May": "pl_May",
-      "Month": "pl_Choose month...",
-      "November": "pl_November",
-      "October": "pl_October",
-      "September": "pl_September",
-      "Year": "pl_Choose year..."
+      "April": "kwiecień",
+      "August": "sierpień",
+      "Day": "Wybierz dzień...",
+      "December": "grudzień",
+      "February": "luty",
+      "January": "styczeń",
+      "July": "lipiec",
+      "June": "czerwiec",
+      "March": "marzec",
+      "May": "maj",
+      "Month": "Wybierz miesiąc...",
+      "November": "listopad",
+      "October": "październik",
+      "September": "wrzesień",
+      "Year": "Wybierz rok..."
     },
     "DetailsPlaceholder": {
-      "PluralForm": "pl_characters remaining",
-      "SingularForm": "pl_character remaining"
+      "PluralForm": "pozostało znaków",
+      "SingularForm": "pozostał znak"
     },
     "DoNotAssent": "Brak zgody",
     "DoNotConsent": "Nie udzielono zgody",
@@ -500,73 +378,73 @@
     "RegisterButton": "Zarejestruj się",
     "SaveAndSubmit": "Zapisz i prześlij",
     "SaveAndSubmitEnrollment": "Zapisz i wyślij formularz rejestracji",
-    "SavingButton": "pl_Saving",
+    "SavingButton": "Zapisywanie",
     "SignAndAssent": "Podpis i udzielenie zgody przez osobę małoletnią",
     "SignAndConsent": "Podpis i udzielenie zgody",
     "StartOrResume": "Rozpocznij/wznów",
-    "SubmitButton": "pl_Submit",
+    "SubmitButton": "Prześlij",
     "SignInOut": {
       "SignOut": "Wyloguj"
     },
     "Title": {
-      "Alert": "pl_Your session will time-out soon",
-      "Default": "pl_The Global A-T Family Data Platform"
+      "Alert": "Twoja sesja wkrótce wygaśnie",
+      "Default": "Ogólnoświatowa Platforma Danych Stowarzyszenia Rodzin z A-T"
     },
     "TooltipAlt": "Czyje imię i nazwisko mam wpisać?",
     "UserActivities": {
       "ActivityActions": "Działania",
-      "ActivityDate": "pl_Created",
-      "ActivityName": "pl_Form",
+      "ActivityDate": "Utworzono",
+      "ActivityName": "Formularz",
       "ActivityStatus": "Status",
       "ActivityStatuses": {
         "COMPLETE": "Wypełniono",
         "CREATED": "Nie rozpoczęto",
         "IN_PROGRESS": "W toku"
       },
-      "QuestionCount": "pl_{{ answered }} / {{ total }} Answered",
-      "Summary": "pl_Summary",
+      "QuestionCount": "{{ answered }} / {{ total }} Odpowiedziano",
+      "Summary": "Podsumowanie",
       "SurveysToComplete": {
-        "Plural": "pl_{{ count }} surveys to complete",
-        "Singular": "pl_{{ count }} survey to complete"
+        "Plural": "{{ count }} ankiet do wypełnienia",
+        "Singular": "{{ count }} ankieta do wypełnienia"
       }
     },
     "UserMenu": {
       "SignOutButton": "Wyloguj"
     },
     "UserPreferences": {
-      "UserPreferencesGender": "pl_Sex",
-      "UserPreferencesLocale": "pl_Preferred language",
-      "UserPreferencesTitle": "pl_User preferences"
+      "UserPreferencesGender": "Płeć",
+      "UserPreferencesLocale": "Preferowany język",
+      "UserPreferencesTitle": "Preferencje użytkownika"
     },
-    "ValidateError": "pl_Submission cannot proceed. Please review messages in form for details.",
+    "ValidateError": "Nie można przesłać dalej. Aby uzyskać szczegółowe informacje, należy sprawdzić wiadomości w formularzu.",
     "Validators": {
-      "DateNavyValidationRule": "[PL] Entered date is invalid"
+      "DateNavyValidationRule": "Podana data jest nieprawidłowa"
     }
   },
   "Statistics": {
-    "Title": "pl_The A-T Family Data Platform by the Numbers",
+    "Title": "Ogólnoświatowa Platforma Danych Stowarzyszenia Rodzin z A-T w liczbach",
     "CountList": {
-      "totalParticipantsCount": "pl_Total number of participants",
-      "countriesCount": "pl_Countries represented",
-      "genomeStudyParticipantsCount": "pl_People consenting to participate in genome sequencing",
-      "governedParticipantsCount": "pl_Children enrolled by their parents",
-      "selfEnrolledParticipantsCount": "pl_Self-enrolled participants"
+      "totalParticipantsCount": "Łączna liczba uczestników",
+      "countriesCount": "Reprezentowane kraje",
+      "genomeStudyParticipantsCount": "Osoby wyrażające zgodę na udział w sekwencjonowaniu genomu",
+      "governedParticipantsCount": "Dzieci zapisane przez rodziców",
+      "selfEnrolledParticipantsCount": "Uczestnicy zarejestrowani samodzielnie"
     },
-    "Subtitle": "pl_Countries represented"
+    "Subtitle": "Reprezentowane kraje"
   },
   "Survey": {
     "Self": "{{ firstName }}proces rekrutacji uczestnika",
     "NewParticipant": "New Participantproces rekrutacji uczestnika",
     "ThankYouPopup": {
-      "Text": "pl_Thank you for submitting the survey"
+      "Text": "Dziękujemy za przesłanie ankiety"
     }
   },
   "Toolkit": {
     "ActivityActions": {
-      "Continue": "pl_Continue",
-      "Start": "pl_Start",
-      "View": "pl_View",
-      "Edit": "pl_Edit"
+      "Continue": "Dalej",
+      "Start": "Rozpocznij",
+      "View": "Podgląd",
+      "Edit": "Edytuj"
     },
     "Dashboard": {
       "Actions": "Działania",
@@ -583,24 +461,24 @@
         "CancelButton": "Anuluj",
         "Fields": {
           "ConfirmEmail": {
-            "Error": "pl_Please enter a valid email address",
-            "Placeholder": "pl_Email confirmation *"
+            "Error": "Podaj prawidłowy adres e-mail",
+            "Placeholder": "Potwierdzenie adresu e-mail *"
           },
           "Email": {
-            "Error": "pl_Please enter a valid email address",
+            "Error": "Podaj prawidłowy adres e-mail",
             "Placeholder": "Adres e-mail"
           },
           "FirstName": {
-            "Error": "pl_First Name is required",
+            "Error": "Wymagane jest imię",
             "Placeholder": "Imię"
           },
           "LastName": {
-            "Error": "pl_Last Name is required",
+            "Error": "Wymagane jest nazwisko",
             "Placeholder": "Nazwisko"
           }
         },
-        "LoadingError": "pl_We're sorry, but an error has occurred.",
-        "MatchEmailsError": "pl_Please ensure that both email fields are filled in and that the addresses match.",
+        "LoadingError": "Przykro nam, ale wystąpił błąd.",
+        "MatchEmailsError": "Upewnij się, że oba pola e-mail są wypełnione i że adresy się zgadzają.",
         "Required": "",
         "SubmitButton": "Dołącz do listy mailingowej",
         "Text": "Podaj nam swój adres e-mail. Będziemy wtedy przekazywać ci informacje o ważnych wydarzeniach w Ogólnoświatowej Platformie Danych Stowarzyszenia Rodzin z A-T.",
@@ -609,12 +487,12 @@
       "SessionWillExpire": {
         "Continue": "Dalej",
         "SignOut": "Wyloguj",
-        "Text": "pl_To protect your privacy, the system is going to log you out because you have been away for a while. Click “Continue” to stay logged in. Click “Sign Out” if you are done for now.",
-        "Title": "pl_Your session will time-out soon"
+        "Text": "Jeśli odejdziesz na pewien czas, system wyloguje Cię ze względu na ochronę Twojej prywatności. Kliknij „Kontynuuj”, aby pozostać zalogowanym/ą. Kliknij „Wyloguj się”, jeśli na razie chcesz zakończyć.",
+        "Title": "Twoja sesja wkrótce wygaśnie"
       }
     },
     "ErrorCodes": {
-      "PASSWORD_RESET_LINK_EXPIRED": "pl_Your password reset link has expired."
+      "PASSWORD_RESET_LINK_EXPIRED": "Twój link do resetowania hasła wygasł."
     },
     "ErrorPage": {
       "DefaultText": {
@@ -625,18 +503,18 @@
       "Title": "Niestety wystąpił błąd. Prosimy spróbować później."
     },
     "Password": {
-      "InputPlaceholder": "pl_Password",
-      "PasswordRequiredError": "pl_Password is required",
-      "PasswordWrongError": "pl_Incorrect password. Please try again.",
-      "Text": "pl_Please enter your password *",
-      "Title": "pl_Please enter the password"
+      "InputPlaceholder": "Hasło",
+      "PasswordRequiredError": "Wymagane jest hasło",
+      "PasswordWrongError": "Niepoprawne hasło. Proszę spróbować ponownie.",
+      "Text": "Proszę wprowadzić swoje hasło *",
+      "Title": "Proszę wprowadzić hasło"
     },
     "SessionExpired": {
-      "Text": "pl_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
+      "Text": "Ponieważ przez pewien czas Cię nie było, ze względów bezpieczeństwa nastąpiło wylogowanie. Zaloguj się ponownie, aby powrócić do ostatnio otwartej strony."
     },
     "StayInformed": {
       "Text": "Dziękujemy za dołączenie do listy mailingowej Ogólnoświatowej Platformy Danych Stowarzyszenia Rodzin z A-T. Będziemy ci przekazywać informacje o tej inicjatywie na podany adres e-mail.",
-      "Title": "pl_Stay informed"
+      "Title": "Otrzymuj informacje na bieżąco"
     }
   },
   "WorkflowProgress": {
