--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
@@ -245,10 +245,10 @@
   "Common": {
     "Buttons": {
       "Submit": {
-        "Title": "pt_Submit"
+        "Title": "Enviar"
       },
       "Expand": {
-        "Title": "pt_Expand"
+        "Title": "Expandir"
       }
     },
     "Navigation": {
@@ -261,135 +261,13 @@
       "LearnMore": "Descubra mais",
       "MedicalHistoryQuestionnaire": "Histórico médico",
       "MyAccount": "Minha conta",
-      "MyDashboard": "pt_My Dashboard",
+      "MyDashboard": "Meu painel",
       "Next": "Avançar",
       "Previous": "Anterior",
       "SignIn": "Registre-se",
-      "Statistics": "pt_Platform Statistics",
-      "Submit": "pt_Submit",
+      "Statistics": "Estatísticas da plataforma",
+      "Submit": "Enviar",
       "YourParticipants": "Seus participantes"
-    }
-  },
-  "DataAccess": {
-    "Assurances": {
-      "AssuranceList": [
-        "pt_Data will only be used for approved research.",
-        "pt_Data confidentiality will be protected and the investigator will never make any attempt at \"re-identification.\"",
-        "pt_There will be no transfer of any part of the dataset to any other investigators or institutions (except between collaborating investigators or any project assistants who answer directly to the Principal Investigator).",
-        "pt_All applicable laws and local institutional policies will be followed.",
-        "pt_Data will not be sold or shared with third parties.",
-        "pt_Accidental transfer of any part of the dataset will be prevented. Adequate security controls are in place, such as secure laptops and storage devices; no downloading is allowed to unsecured network drives or servers.",
-        "pt_Report on the uses of the data, e.g. publications, will be provided to the DAC annually.",
-        "pt_The Global A-T Family Data Platform Dataset will be acknowledged in any publication or presentation resulting from the use of the Dataset.",
-        "pt_Collaborating investigators from the researcher’s institution, as listed in the DAR form, agree to these Assurances.",
-        "pt_These assurances will be agreed to annually."
-      ],
-      "Controls": {
-        "ApplyingSignature": {
-          "Label": "pt_Signature of Applying Researcher"
-        },
-        "Date": {
-          "Label": "pt_Date"
-        }
-      },
-      "Paragraph1": "pt_I agree to the following assurances:",
-      "Title": "pt_Assurances Statement"
-    },
-    "Dataset": {
-      "Controls": {
-        "Genomic": {
-          "Label": "pt_Genomic Data"
-        },
-        "Survey": {
-          "Label": "pt_Clinical Survey Data"
-        }
-      },
-      "Messages": {
-        "FileSizeExceedsTheLimit": "pt_File size exceeds the limit",
-        "ResearcherBiosketch": "pt_Researcher biosketch cannot be empty.",
-        "ResearcherEmail": "pt_Researcher email cannot be empty.",
-        "ResearcherName": "pt_Researcher name cannot be empty.",
-        "ResearcherOrgAddress": "pt_Org address 1 cannot be empty.",
-        "ResearcherOrgCity": "pt_Org city cannot be empty.",
-        "ResearcherOrgCountry": "pt_Org country cannot be empty.",
-        "ResearcherOrgName": "pt_Org name cannot be empty.",
-        "ResearcherOrgZip": "pt_Org zip cannot be empty.",
-        "ResearcherPhone": "pt_Researcher phone cannot include letters.",
-        "ResearcherProjectDescription": "pt_Project description cannot be empty.",
-        "ResearcherSign": "pt_Researcher signature cannot be empty.",
-        "ResearcherUse": "pt_Research use cannot be empty."
-      },
-      "SubTitle1": "pt_Select all applicable options.",
-      "SubTitle2": "pt_Specific Requests",
-      "Text1": "pt_Please state the disease area(s), if any, that this study focuses on.",
-      "Title": "pt_Dataset(s) requested"
-    },
-    "Header": {
-      "Paragraph1": "A Global A-T Family Data Platform é uma iniciativa liderada por pacientes e supervisionada por famílias e especialistas em A-T de todo o mundo através da qual informações de saúde, dados genéticos e potencialmente outros tipos de dados sobre pessoas com A-T podem ser compartilhados com pesquisadores. A missão da nossa plataforma é permitir aos pesquisadores acessar importantes dados de pacientes de todo o mundo de maneira rápida, segura e eficiente, o que, esperamos, leve a novas descobertas.",
-      "Paragraph2": "pt_Researchers should request access to the data using this Data Access Request (DAR) form which includes assurances associated with the use of these data sets.",
-      "Paragraph3": "pt_Our Data Access Committee (DAC) will review the DAR form submitted by the researchers and will either approve or disapprove data access.",
-      "Paragraph4": "pt_Researchers will certify that they will abide by the assurances given in this form, including agreeing not to distribute controlled-access data in any form to any third parties other than their own research staff who have agreed to these assurances. For projects that include collaborators at other institutions, collaborating investigators are required to submit separate DAR forms.",
-      "Paragraph5": "pt_Upon receiving access approval, researchers will be provided with specific credentials to authenticate their identity and gain access to the controlled-access datasets. The DAC requests annual reports from researchers about what has been accomplished using the data and any violations of the assurances that may have occurred.",
-      "Title": "pt_Data Access Request"
-    },
-    "OrganizationForm": {
-      "Address1": "pt_Address 1",
-      "Address2": "pt_Address 2",
-      "City": "pt_City/Town",
-      "Country": "País",
-      "Department": "pt_Department",
-      "Name": "pt_Organization Name",
-      "State": "Estado/província",
-      "Title": "pt_Organization Information",
-      "Zip": "pt_Zip/Postal Code"
-    },
-    "ResearcherForm": {
-      "Attachment": "pt_Please attach a CV and/or biographical sketch (PDF files only, 2MB max)",
-      "Email": "pt_Email",
-      "Name": "pt_Name",
-      "Phone": "pt_Phone",
-      "Title": "pt_Researcher Information"
-    },
-    "ResearchProject": {
-      "Article1": {
-        "Paragraph": "pt_Please note that coordinated requests made by researchers who are collaborating on the same project should use the same title.",
-        "Title": "pt_Descriptive Title of Project"
-      },
-      "Article2": {
-        "Paragraph": "pt_Collaborators at different institutions from the PI must complete a separate DAR form.",
-        "Title": "pt_Names and Institutions of Collaborators"
-      },
-      "Article3": {
-        "Paragraph": "pt_Please provide a brief description of the proposed use of the dataset(s) to be reviewed by the Data Access Committee. This statement should be one or two paragraphs in length and include research objectives, the study design and an analysis plan. If you are requesting multiple datasets, please describe how you will use them.",
-        "Title": "pt_Research Use Statement"
-      },
-      "Title": "pt_Research Project Overview"
-    },
-    "TypeResearch": {
-      "Controls": {
-        "Label": "pt_Controls",
-        "Paragraph": "pt_The reason for this request is to increase the number of controls available for a comparison group (e.g., a case-control study)."
-      },
-      "Describe": {
-        "Label": "pt_Please describe"
-      },
-      "DisableStudy": {
-        "Label": "pt_Disease study",
-        "Paragraph": "pt_The primary purpose of the research is to learn more about a particular disease or disorder (e.g., type 2 diabetes), a trait (e.g., blood pressure), or a set of related conditions (e.g., autoimmune diseases, psychiatric disorders)."
-      },
-      "MethodDevelopment": {
-        "Label": "pt_Methods development and validation studies",
-        "Paragraph": "pt_The primary purpose of the research is to develop and/or validate new methods for analyzing or interpreting data (e.g., developing more powerful methods to detect epistatic, gene-environment, or other types of complex interactions in genome-wide association studies). Data will be used for developing and/or validating new methods."
-      },
-      "Other": {
-        "Label": "pt_Other"
-      },
-      "Population": {
-        "Label": "pt_Population structure or normal variation studies",
-        "Paragraph": "pt_The primary purpose of the research is to understand variation in the general population (e.g., genetic substructure of a population)."
-      },
-      "SubTitle": "pt_Select all applicable options.",
-      "Title": "pt_Type of Research"
     }
   },
   "Footer": {
@@ -452,32 +330,32 @@
   "SDK": {
     "DownloadButton": "Baixar análise",
     "CancelButton": "Cancelar",
-    "CloseButton": "pt_Close",
-    "CommunicationError": "pt_There was a problem saving your data. Please check the form and your answers before submitting",
+    "CloseButton": "Fechar",
+    "CommunicationError": "Houve um problema ao salvar seus dados. Confira o formulário e suas respostas antes de enviar",
     "Dashboard": {
       "Text": "",
       "Title": "Meu console"
     },
     "DatePicker": {
-      "April": "pt_April",
-      "August": "pt_August",
-      "Day": "pt_Choose day...",
-      "December": "pt_December",
-      "February": "pt_February",
-      "January": "pt_January",
-      "July": "pt_July",
-      "June": "pt_June",
-      "March": "pt_March",
-      "May": "pt_May",
-      "Month": "pt_Choose month...",
-      "November": "pt_November",
-      "October": "pt_October",
-      "September": "pt_September",
-      "Year": "pt_Choose year..."
+      "April": "Abril",
+      "August": "Agosto",
+      "Day": "Escolher dia...",
+      "December": "Dezembro",
+      "February": "Fevereiro",
+      "January": "Janeiro",
+      "July": "Julho",
+      "June": "Junho",
+      "March": "Março",
+      "May": "Maio",
+      "Month": "Escolher mês...",
+      "November": "Novembro",
+      "October": "Outubro",
+      "September": "Setembro",
+      "Year": "Escolher ano..."
     },
     "DetailsPlaceholder": {
-      "PluralForm": "pt_characters remaining",
-      "SingularForm": "pt_character remaining"
+      "PluralForm": "caracteres restantes",
+      "SingularForm": "caractere restante"
     },
     "DoNotAssent": "Não consinto",
     "DoNotConsent": "Não consinto",
@@ -500,73 +378,73 @@
     "RegisterButton": "Registrar",
     "SaveAndSubmit": "Salvar e enviar",
     "SaveAndSubmitEnrollment": "Salvar e enviar registro",
-    "SavingButton": "pt_Saving",
+    "SavingButton": "Salvando",
     "SignAndAssent": "Assino e consinto",
     "SignAndConsent": "Assino e consinto",
     "StartOrResume": "Iniciar/retomar",
-    "SubmitButton": "pt_Submit",
+    "SubmitButton": "Enviar",
     "SignInOut": {
       "SignOut": "Sair"
     },
     "Title": {
-      "Alert": "pt_Your session will time-out soon",
-      "Default": "pt_The Global A-T Family Data Platform"
+      "Alert": "Sua sessão será encerrada em breve",
+      "Default": "A Global A-T Family Data Platform"
     },
     "TooltipAlt": "Devo informar o nome de quem?",
     "UserActivities": {
       "ActivityActions": "Ações",
-      "ActivityDate": "pt_Created",
-      "ActivityName": "pt_Form",
+      "ActivityDate": "Criado",
+      "ActivityName": "Formulário",
       "ActivityStatus": "Situação",
       "ActivityStatuses": {
         "COMPLETE": "Preenchido",
         "CREATED": "Não iniciado",
         "IN_PROGRESS": "Em andamento"
       },
-      "QuestionCount": "pt_{{ answered }} / {{ total }} Answered",
-      "Summary": "pt_Summary",
+      "QuestionCount": "{{ answered }} / {{ total }} respondidas",
+      "Summary": "Resumo",
       "SurveysToComplete": {
-        "Plural": "pt_{{ count }} surveys to complete",
-        "Singular": "pt_{{ count }} survey to complete"
+        "Plural": "{{ count }} pesquisas para responder",
+        "Singular": "{{ count }} pesquisa para responder"
       }
     },
     "UserMenu": {
       "SignOutButton": "Sair"
     },
     "UserPreferences": {
-      "UserPreferencesGender": "pt_Sex",
-      "UserPreferencesLocale": "pt_Preferred language",
-      "UserPreferencesTitle": "pt_User preferences"
+      "UserPreferencesGender": "Sexo",
+      "UserPreferencesLocale": "Idioma preferencial",
+      "UserPreferencesTitle": "Preferências do usuário"
     },
-    "ValidateError": "pt_Submission cannot proceed. Please review messages in form for details.",
+    "ValidateError": "Não é possível concluir o envio. Confira as mensagens no formulário para saber detalhes.",
     "Validators": {
-      "DateNavyValidationRule": "[PT] Entered date is invalid"
+      "DateNavyValidationRule": "A data inserida é inválida"
     }
   },
   "Statistics": {
-    "Title": "pt_The A-T Family Data Platform by the Numbers",
+    "Title": "Os números da A-T Family Data Platform",
     "CountList": {
-      "totalParticipantsCount": "pt_Total number of participants",
-      "countriesCount": "pt_Countries represented",
-      "genomeStudyParticipantsCount": "pt_People consenting to participate in genome sequencing",
-      "governedParticipantsCount": "pt_Children enrolled by their parents",
-      "selfEnrolledParticipantsCount": "pt_Self-enrolled participants"
+      "totalParticipantsCount": "Número total de participantes",
+      "countriesCount": "Países representados",
+      "genomeStudyParticipantsCount": "Pessoas que aceitaram participar do sequenciamento de genoma",
+      "governedParticipantsCount": "Crianças inscritas pelos pais",
+      "selfEnrolledParticipantsCount": "Participantes autoinscritos"
     },
-    "Subtitle": "pt_Countries represented"
+    "Subtitle": "Países representados"
   },
   "Survey": {
     "Self": "{{ firstName }}- processo de inscrição",
-    "NewParticipant": "New Participant- processo de inscrição",
+    "NewParticipant": "Novo Participante- processo de inscrição",
     "ThankYouPopup": {
-      "Text": "pt_Thank you for submitting the survey"
+      "Text": "Agradecemos por enviar a pesquisa"
     }
   },
   "Toolkit": {
     "ActivityActions": {
-      "Continue": "pt_Continue",
-      "Start": "pt_Start",
-      "View": "pt_View",
-      "Edit": "pt_Edit"
+      "Continue": "Continuar",
+      "Start": "Iniciar",
+      "View": "Ver",
+      "Edit": "Editar"
     },
     "Dashboard": {
       "Actions": "Ações",
@@ -583,24 +461,24 @@
         "CancelButton": "Cancelar",
         "Fields": {
           "ConfirmEmail": {
-            "Error": "pt_Please enter a valid email address",
-            "Placeholder": "pt_Email confirmation *"
+            "Error": "Insira um endereço de e-mail válido",
+            "Placeholder": "Confirmação do e-mail *"
           },
           "Email": {
-            "Error": "pt_Please enter a valid email address",
+            "Error": "Insira um endereço de e-mail válido",
             "Placeholder": "Endereço de e-mail"
           },
           "FirstName": {
-            "Error": "pt_First Name is required",
+            "Error": "O campo \"Nome\" é obrigatório",
             "Placeholder": "Primeiro nome"
           },
           "LastName": {
-            "Error": "pt_Last Name is required",
+            "Error": "O campo \"Sobrenome\" é obrigatório",
             "Placeholder": "Sobrenome"
           }
         },
-        "LoadingError": "pt_We're sorry, but an error has occurred.",
-        "MatchEmailsError": "pt_Please ensure that both email fields are filled in and that the addresses match.",
+        "LoadingError": "Infelizmente ocorreu um erro.",
+        "MatchEmailsError": "Ambos os campos de e-mail devem ser preenchidos e os endereços devem ser iguais.",
         "Required": "",
         "SubmitButton": "Participar da lista de discussão",
         "Text": "Forneça um endereço de e-mail e nós manteremos você informado sobre o progresso da Global A-T Family Data Platform.",
@@ -609,12 +487,12 @@
       "SessionWillExpire": {
         "Continue": "Continuar",
         "SignOut": "Sair",
-        "Text": "pt_To protect your privacy, the system is going to log you out because you have been away for a while. Click “Continue” to stay logged in. Click “Sign Out” if you are done for now.",
-        "Title": "pt_Your session will time-out soon"
+        "Text": "Para proteger sua privacidade, o sistema encerrará sua sessão porque você está ausente há algum tempo. Clique em \"Continuar\" para manter a conexão. Clique em \"Sair\" se tiver concluído por enquanto.",
+        "Title": "Sua sessão será encerrada em breve"
       }
     },
     "ErrorCodes": {
-      "PASSWORD_RESET_LINK_EXPIRED": "pt_Your password reset link has expired."
+      "PASSWORD_RESET_LINK_EXPIRED": "O link de redefinição de senha expirou."
     },
     "ErrorPage": {
       "DefaultText": {
@@ -625,18 +503,18 @@
       "Title": "Lamentamos, mas ocorreu um erro. Tente novamente mais tarde."
     },
     "Password": {
-      "InputPlaceholder": "pt_Password",
-      "PasswordRequiredError": "pt_Password is required",
-      "PasswordWrongError": "pt_Incorrect password. Please try again.",
-      "Text": "pt_Please enter your password *",
-      "Title": "pt_Please enter the password"
+      "InputPlaceholder": "Senha",
+      "PasswordRequiredError": "É necessário inserir a senha",
+      "PasswordWrongError": "Senha incorreta. Tente novamente.",
+      "Text": "Insira sua senha *",
+      "Title": "Insira a senha"
     },
     "SessionExpired": {
-      "Text": "pt_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
+      "Text": "Você está ausente há algum tempo e encerraremos a sessão como medida de segurança. Faça login novamente para voltar à página em que estava."
     },
     "StayInformed": {
       "Text": "Obrigado por se associar à lista de discussão da Global A-T Family Data Platfom. Manteremos você informado sobre essa iniciativa usando o endereço de e-mail que você forneceu.",
-      "Title": "pt_Stay informed"
+      "Title": "Mantenha-se informado"
     }
   },
   "WorkflowProgress": {
