--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -245,10 +245,10 @@
   "Common": {
     "Buttons": {
       "Submit": {
-        "Title": "ru_Submit"
+        "Title": "Отправить"
       },
       "Expand": {
-        "Title": "ru_Expand"
+        "Title": "Развернуть"
       }
     },
     "Navigation": {
@@ -261,135 +261,13 @@
       "LearnMore": "Узнать больше",
       "MedicalHistoryQuestionnaire": "Медицинские данные",
       "MyAccount": "Моя учетная запись",
-      "MyDashboard": "ru_My Dashboard",
+      "MyDashboard": "Моя информационная панель",
       "Next": "Следующий",
       "Previous": "Предыдущий",
       "SignIn": "Войти",
-      "Statistics": "ru_Platform Statistics",
-      "Submit": "ru_Submit",
+      "Statistics": "Статистика по платформе",
+      "Submit": "Отправить",
       "YourParticipants": "Ваши участники"
-    }
-  },
-  "DataAccess": {
-    "Assurances": {
-      "AssuranceList": [
-        "ru_Data will only be used for approved research.",
-        "ru_Data confidentiality will be protected and the investigator will never make any attempt at \"re-identification.\"",
-        "ru_There will be no transfer of any part of the dataset to any other investigators or institutions (except between collaborating investigators or any project assistants who answer directly to the Principal Investigator).",
-        "ru_All applicable laws and local institutional policies will be followed.",
-        "ru_Data will not be sold or shared with third parties.",
-        "ru_Accidental transfer of any part of the dataset will be prevented. Adequate security controls are in place, such as secure laptops and storage devices; no downloading is allowed to unsecured network drives or servers.",
-        "ru_Report on the uses of the data, e.g. publications, will be provided to the DAC annually.",
-        "ru_The Global A-T Family Data Platform Dataset will be acknowledged in any publication or presentation resulting from the use of the Dataset.",
-        "ru_Collaborating investigators from the researcher’s institution, as listed in the DAR form, agree to these Assurances.",
-        "ru_These assurances will be agreed to annually."
-      ],
-      "Controls": {
-        "ApplyingSignature": {
-          "Label": "ru_Signature of Applying Researcher"
-        },
-        "Date": {
-          "Label": "ru_Date"
-        }
-      },
-      "Paragraph1": "ru_I agree to the following assurances:",
-      "Title": "ru_Assurances Statement"
-    },
-    "Dataset": {
-      "Controls": {
-        "Genomic": {
-          "Label": "ru_Genomic Data"
-        },
-        "Survey": {
-          "Label": "ru_Clinical Survey Data"
-        }
-      },
-      "Messages": {
-        "FileSizeExceedsTheLimit": "ru_File size exceeds the limit",
-        "ResearcherBiosketch": "ru_Researcher biosketch cannot be empty.",
-        "ResearcherEmail": "ru_Researcher email cannot be empty.",
-        "ResearcherName": "ru_Researcher name cannot be empty.",
-        "ResearcherOrgAddress": "ru_Org address 1 cannot be empty.",
-        "ResearcherOrgCity": "ru_Org city cannot be empty.",
-        "ResearcherOrgCountry": "ru_Org country cannot be empty.",
-        "ResearcherOrgName": "ru_Org name cannot be empty.",
-        "ResearcherOrgZip": "ru_Org zip cannot be empty.",
-        "ResearcherPhone": "ru_Researcher phone cannot include letters.",
-        "ResearcherProjectDescription": "ru_Project description cannot be empty.",
-        "ResearcherSign": "ru_Researcher signature cannot be empty.",
-        "ResearcherUse": "ru_Research use cannot be empty."
-      },
-      "SubTitle1": "ru_Select all applicable options.",
-      "SubTitle2": "ru_Specific Requests",
-      "Text1": "ru_Please state the disease area(s), if any, that this study focuses on.",
-      "Title": "ru_Dataset(s) requested"
-    },
-    "Header": {
-      "Paragraph1": "Глобальная платформа данных о семьях с А-Т — это ориентированная на потребности пациентов программа, которая проводится под наблюдением семей с А-Т и экспертов по всему миру, позволяя исследователям обмениваться медицинской информацией, результатами генетических исследований и другими возможными данными о людях с А-Т. Наша платформа позволит исследователям быстро, безопасно и эффективно получать доступ к важным данным о пациентах со всего мира, что может привести к новым открытиям.",
-      "Paragraph2": "ru_Researchers should request access to the data using this Data Access Request (DAR) form which includes assurances associated with the use of these data sets.",
-      "Paragraph3": "ru_Our Data Access Committee (DAC) will review the DAR form submitted by the researchers and will either approve or disapprove data access.",
-      "Paragraph4": "ru_Researchers will certify that they will abide by the assurances given in this form, including agreeing not to distribute controlled-access data in any form to any third parties other than their own research staff who have agreed to these assurances. For projects that include collaborators at other institutions, collaborating investigators are required to submit separate DAR forms.",
-      "Paragraph5": "ru_Upon receiving access approval, researchers will be provided with specific credentials to authenticate their identity and gain access to the controlled-access datasets. The DAC requests annual reports from researchers about what has been accomplished using the data and any violations of the assurances that may have occurred.",
-      "Title": "ru_Data Access Request"
-    },
-    "OrganizationForm": {
-      "Address1": "ru_Address 1",
-      "Address2": "ru_Address 2",
-      "City": "ru_City/Town",
-      "Country": "Страна",
-      "Department": "ru_Department",
-      "Name": "ru_Organization Name",
-      "State": "Штат/провинция",
-      "Title": "ru_Organization Information",
-      "Zip": "ru_Zip/Postal Code"
-    },
-    "ResearcherForm": {
-      "Attachment": "ru_Please attach a CV and/or biographical sketch (PDF files only, 2MB max)",
-      "Email": "ru_Email",
-      "Name": "ru_Name",
-      "Phone": "ru_Phone",
-      "Title": "ru_Researcher Information"
-    },
-    "ResearchProject": {
-      "Article1": {
-        "Paragraph": "ru_Please note that coordinated requests made by researchers who are collaborating on the same project should use the same title.",
-        "Title": "ru_Descriptive Title of Project"
-      },
-      "Article2": {
-        "Paragraph": "ru_Collaborators at different institutions from the PI must complete a separate DAR form.",
-        "Title": "ru_Names and Institutions of Collaborators"
-      },
-      "Article3": {
-        "Paragraph": "ru_Please provide a brief description of the proposed use of the dataset(s) to be reviewed by the Data Access Committee. This statement should be one or two paragraphs in length and include research objectives, the study design and an analysis plan. If you are requesting multiple datasets, please describe how you will use them.",
-        "Title": "ru_Research Use Statement"
-      },
-      "Title": "ru_Research Project Overview"
-    },
-    "TypeResearch": {
-      "Controls": {
-        "Label": "ru_Controls",
-        "Paragraph": "ru_The reason for this request is to increase the number of controls available for a comparison group (e.g., a case-control study)."
-      },
-      "Describe": {
-        "Label": "ru_Please describe"
-      },
-      "DisableStudy": {
-        "Label": "ru_Disease study",
-        "Paragraph": "ru_The primary purpose of the research is to learn more about a particular disease or disorder (e.g., type 2 diabetes), a trait (e.g., blood pressure), or a set of related conditions (e.g., autoimmune diseases, psychiatric disorders)."
-      },
-      "MethodDevelopment": {
-        "Label": "ru_Methods development and validation studies",
-        "Paragraph": "ru_The primary purpose of the research is to develop and/or validate new methods for analyzing or interpreting data (e.g., developing more powerful methods to detect epistatic, gene-environment, or other types of complex interactions in genome-wide association studies). Data will be used for developing and/or validating new methods."
-      },
-      "Other": {
-        "Label": "ru_Other"
-      },
-      "Population": {
-        "Label": "ru_Population structure or normal variation studies",
-        "Paragraph": "ru_The primary purpose of the research is to understand variation in the general population (e.g., genetic substructure of a population)."
-      },
-      "SubTitle": "ru_Select all applicable options.",
-      "Title": "ru_Type of Research"
     }
   },
   "Footer": {
@@ -452,32 +330,32 @@
   "SDK": {
     "DownloadButton": "Загрузить обзор",
     "CancelButton": "Отменить",
-    "CloseButton": "ru_Close",
-    "CommunicationError": "ru_There was a problem saving your data. Please check the form and your answers before submitting",
+    "CloseButton": "Закрыть",
+    "CommunicationError": "Возникла проблема при сохранении ваших данных. Проверьте форму и свои ответы перед отправкой",
     "Dashboard": {
       "Text": "",
       "Title": "Моя консоль"
     },
     "DatePicker": {
-      "April": "ru_April",
-      "August": "ru_August",
-      "Day": "ru_Choose day...",
-      "December": "ru_December",
-      "February": "ru_February",
-      "January": "ru_January",
-      "July": "ru_July",
-      "June": "ru_June",
-      "March": "ru_March",
-      "May": "ru_May",
-      "Month": "ru_Choose month...",
-      "November": "ru_November",
-      "October": "ru_October",
-      "September": "ru_September",
-      "Year": "ru_Choose year..."
+      "April": "Апрель",
+      "August": "Август",
+      "Day": "Выбрать день...",
+      "December": "Декабрь",
+      "February": "Февраль",
+      "January": "Январь",
+      "July": "Июль",
+      "June": "Июнь",
+      "March": "Март",
+      "May": "Май",
+      "Month": "Выбрать месяц...",
+      "November": "Ноябрь",
+      "October": "Октябрь",
+      "September": "Сентябрь",
+      "Year": "Выбрать год..."
     },
     "DetailsPlaceholder": {
-      "PluralForm": "ru_characters remaining",
-      "SingularForm": "ru_character remaining"
+      "PluralForm": "символов осталось",
+      "SingularForm": "символ остался"
     },
     "DoNotAssent": "Не давать согласие для несовершеннолетних",
     "DoNotConsent": "Не давать согласие",
@@ -500,73 +378,73 @@
     "RegisterButton": "Зарегистрироваться",
     "SaveAndSubmit": "Сохранить и отправить",
     "SaveAndSubmitEnrollment": "Сохранить и отправить информацию для регистрации",
-    "SavingButton": "ru_Saving",
+    "SavingButton": "Сохранение",
     "SignAndAssent": "Регистрация и Согласие для несовершеннолетних",
     "SignAndConsent": "Регистрация и согласие",
     "StartOrResume": "Начать/возобновить",
-    "SubmitButton": "ru_Submit",
+    "SubmitButton": "Отправить",
     "SignInOut": {
       "SignOut": "Выйти"
     },
     "Title": {
-      "Alert": "ru_Your session will time-out soon",
-      "Default": "ru_The Global A-T Family Data Platform"
+      "Alert": "Время вашего сеанса скоро закончится",
+      "Default": "Глобальная платформа данных о семьях с А-Т"
     },
     "TooltipAlt": "Чье имя мне нужно ввести?",
     "UserActivities": {
       "ActivityActions": "Действия",
-      "ActivityDate": "ru_Created",
-      "ActivityName": "ru_Form",
+      "ActivityDate": "Создано",
+      "ActivityName": "Форма",
       "ActivityStatus": "Статус",
       "ActivityStatuses": {
         "COMPLETE": "Завершено",
         "CREATED": "Не начато",
         "IN_PROGRESS": "В процессе"
       },
-      "QuestionCount": "ru_{{ answered }} / {{ total }} Answered",
-      "Summary": "ru_Summary",
+      "QuestionCount": "Отвечено: {{ answered }} / {{ total }}",
+      "Summary": "Резюме",
       "SurveysToComplete": {
-        "Plural": "ru_{{ count }} surveys to complete",
-        "Singular": "ru_{{ count }} survey to complete"
+        "Plural": "{{ count }} опросов для заполнения",
+        "Singular": "{{ count }} опрос для заполнения"
       }
     },
     "UserMenu": {
       "SignOutButton": "Выйти"
     },
     "UserPreferences": {
-      "UserPreferencesGender": "ru_Sex",
-      "UserPreferencesLocale": "ru_Preferred language",
-      "UserPreferencesTitle": "ru_User preferences"
+      "UserPreferencesGender": "Пол",
+      "UserPreferencesLocale": "Предпочтительный язык",
+      "UserPreferencesTitle": "Предпочтения пользователя"
     },
-    "ValidateError": "ru_Submission cannot proceed. Please review messages in form for details.",
+    "ValidateError": "Отправка невозможна. Подробнее см. в сообщениях в форме.",
     "Validators": {
       "DateNavyValidationRule": "Введена некорректная дата"
     }
   },
   "Statistics": {
-    "Title": "ru_The A-T Family Data Platform by the Numbers",
+    "Title": "Платформа данных о семьях с А-Т в цифрах",
     "CountList": {
-      "totalParticipantsCount": "ru_Total number of participants",
-      "countriesCount": "ru_Countries represented",
-      "genomeStudyParticipantsCount": "ru_People consenting to participate in genome sequencing",
-      "governedParticipantsCount": "ru_Children enrolled by their parents",
-      "selfEnrolledParticipantsCount": "ru_Self-enrolled participants"
+      "totalParticipantsCount": "Общее число участников",
+      "countriesCount": "Представлено стран",
+      "genomeStudyParticipantsCount": "Число согласившихся участвовать в геномном исследовании",
+      "governedParticipantsCount": "Дети, включенные в исследование их родителями",
+      "selfEnrolledParticipantsCount": "Участники, включившиеся в исследование самостоятельно"
     },
-    "Subtitle": "ru_Countries represented"
+    "Subtitle": "Представлено стран"
   },
   "Survey": {
     "Self": "Процесс регистрации {{ firstName }}",
-    "NewParticipant": "Процесс регистрации New Participant",
+    "NewParticipant": "Процесс регистрации нового участника",
     "ThankYouPopup": {
-      "Text": "ru_Thank you for submitting the survey"
+      "Text": "Спасибо за отправку опроса"
     }
   },
   "Toolkit": {
     "ActivityActions": {
-      "Continue": "ru_Continue",
-      "Start": "ru_Start",
-      "View": "ru_View",
-      "Edit": "ru_Edit"
+      "Continue": "Продолжить",
+      "Start": "Начать",
+      "View": "Просмотр",
+      "Edit": "Редактировать"
     },
     "Dashboard": {
       "Actions": "Действия",
@@ -583,24 +461,24 @@
         "CancelButton": "Отменить",
         "Fields": {
           "ConfirmEmail": {
-            "Error": "ru_Please enter a valid email address",
-            "Placeholder": "ru_Email confirmation *"
+            "Error": "Укажите действительный адрес электронной почты",
+            "Placeholder": "Подтверждение адреса электронной почты *"
           },
           "Email": {
-            "Error": "ru_Please enter a valid email address",
+            "Error": "Укажите действительный адрес электронной почты",
             "Placeholder": "Адрес электронной почты"
           },
           "FirstName": {
-            "Error": "ru_First Name is required",
+            "Error": "Требуется имя",
             "Placeholder": "Имя"
           },
           "LastName": {
-            "Error": "ru_Last Name is required",
+            "Error": "Требуется фамилия",
             "Placeholder": "Фамилия"
           }
         },
-        "LoadingError": "ru_We're sorry, but an error has occurred.",
-        "MatchEmailsError": "ru_Please ensure that both email fields are filled in and that the addresses match.",
+        "LoadingError": "Просим прощения: произошла ошибка.",
+        "MatchEmailsError": "Убедитесь, что оба поля адреса электронной почты заполнены и адреса совпадают.",
         "Required": "",
         "SubmitButton": "Внести свой адрес в список рассылки",
         "Text": "Укажите свой адрес электронной почты, и мы будем информировать вас о развитии Глобальной платформы данных о семьях с A-T.",
@@ -609,12 +487,12 @@
       "SessionWillExpire": {
         "Continue": "Продолжить",
         "SignOut": "Выйти",
-        "Text": "ru_To protect your privacy, the system is going to log you out because you have been away for a while. Click “Continue” to stay logged in. Click “Sign Out” if you are done for now.",
-        "Title": "ru_Your session will time-out soon"
+        "Text": "Чтобы защитить вашу конфиденциальность, вы будете выведены из системы, потому что отсутствовали какое-то время. Нажмите \"Продолжить\", чтобы остаться в системе. Нажмите \"Выйти\", если вы завершили работу.",
+        "Title": "Время вашего сеанса скоро закончится"
       }
     },
     "ErrorCodes": {
-      "PASSWORD_RESET_LINK_EXPIRED": "ru_Your password reset link has expired."
+      "PASSWORD_RESET_LINK_EXPIRED": "Срок действия ссылки для сброса вашего пароля истек."
     },
     "ErrorPage": {
       "DefaultText": {
@@ -625,18 +503,18 @@
       "Title": "Просим прощения: произошла ошибка. Пожалуйста, повторите попытку позже."
     },
     "Password": {
-      "InputPlaceholder": "ru_Password",
-      "PasswordRequiredError": "ru_Password is required",
-      "PasswordWrongError": "ru_Incorrect password. Please try again.",
-      "Text": "ru_Please enter your password *",
-      "Title": "ru_Please enter the password"
+      "InputPlaceholder": "Пароль",
+      "PasswordRequiredError": "Пароль обязателен",
+      "PasswordWrongError": "Неверный пароль. Повторите попытку.",
+      "Text": "Введите свой пароль *",
+      "Title": "Введите пароль"
     },
     "SessionExpired": {
-      "Text": "ru_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
+      "Text": "Вы отсутствовали какое-то время, поэтому мы вывели вас из системы в качестве меры безопасности. Войдите в систему снова, чтобы вернуться на последнюю страницу, на которой вы были."
     },
     "StayInformed": {
       "Text": "Благодарим вас за регистрацию в листе рассылки Глобальной платформы данных о семьях с А-Т. Мы будем информировать вас о нашей программе по указанному вами адресу электронной почты.",
-      "Title": "ru_Stay informed"
+      "Title": "Будьте в курсе"
     }
   },
   "WorkflowProgress": {
